add TEST BLOG CONTENT update content

--- a/src/content/fbarticles/japonia-1937-44.mdx
+++ b/src/content/fbarticles/japonia-1937-44.mdx
@@ -40,8 +40,9 @@ Punktem przełomowym tej wojny była bitwa o Midway 4-7 czerwca 1942, czyli zale
 
 ### 1944
 
-W 1944 dwa najważniejsze starcia japońsko amerykańskie rozstrzygające o japońskiej klęsce:
+W 1944 trzy najważniejsze starcia japońsko amerykańskie rozstrzygające o japońskiej klęsce:
 
+- Chuuk (dawniej Truk) "Gibraltar Pacyfiku" - **Operation Hailstone** 17-18 lutego.
 - Walki o archipelag Marianów. Jej najważniejszą częścią była wielka **bitwa morska na Morzu Filipińskim** 19-20 czerwca, która wyeliminowała zdolność Japonii do przeprowadzenia operacji strategicznych.
 - Kampania filipińska z przełomową **bitwą w Zatoce Leyte** 23-26 października. Największa bitwa morska w historii. Rozstrzygnęła panowanie na wodach otaczających Filipiny, w rezultacie przesądziła o zwycięstwie Amerykanów na Filipinach i izolacji Japonii na Pacyfiku.
 
@@ -49,6 +50,7 @@ Mariany w 1899 zostały kupione przez Niemcy od Hiszpanii, która w tym czasie b
 
 Zdobycie japońskich pozycji na Marianach metodą "żabich skoków" czyli zdobywania kolejnych punktów na oceanie, coraz bliższych Japonii:
 
+- Zdobycie Chuuk, 17-18 lutego; Dark Seas ["Operation Hailstone - Japan gets Pearl Harbored" [YT 11:59]](https://www.youtube.com/watch?v=gjxzaiMPGeE)
 - Bitwa o Saipan, 15 czerwca – 9 lipca; wyspy broniła 31 Armia 32 tys żołnierzy; Mark Felton Productions ["Saipan 1944 - Piercing Japan's Pacific Defences" [YT 10:16]](https://www.youtube.com/watch?v=lHxL192Qxrs) | ["Banzai Tank Charge - Saipan 1944" [YT 13:40]](https://www.youtube.com/watch?v=PLJ-Y-IrUjU) 24 listopada wystartowały stamtąd pierwsze B-29
 - Bitwa o Guam, 21 lipca – 10 sierpnia
 - Bitwa o Tinian, 24 lipca – 1 sierpnia
