--- a/src/content/fbarticles/japonia-bron.mdx
+++ b/src/content/fbarticles/japonia-bron.mdx
@@ -50,7 +50,7 @@ Już sama wielkość to pokazuje. Rozpiętość skrzydeł: B-25 20 m, B-17 32 m,
 Jak bardzo przełomowym bombowcem był B-29 widać na poniższym porównaniu. Dwie uwagi:
 
 - podane dane mają charakter przybliżony
-- obydwa zblizone osiągami samoloty nie mają znaczenia: Pe-8 powstało niecałe 100 sztuk, He 177 zaś był fatalną konstrukcją, Niemcy włożyli dwa silniki do jednej obudowy co skutkowało przegrzewaniem się i zapalaniem silnika, stąd opinia "latającej trumny".
+- obydwa zbliżone osiągami samoloty nie mają znaczenia: Pe-8 powstało niecałe 100 sztuk, He 177 zaś był fatalną konstrukcją, Niemcy włożyli dwa silniki do jednej obudowy, co skutkowało przegrzewaniem się i zapalaniem silnika, stąd opinia "latającej trumny".
 
 | bombowiec | zasięg | udźwig |
 |---|---|---|
@@ -70,18 +70,23 @@ Jak bardzo przełomowym bombowcem był B-29 widać na poniższym porównaniu. Dw
 | Pe-8 | 5600 km | 4000 - 5000 kg |
 | Boeing B-29 Superfortress | 9000 km | 2300 kg do 9100 kg |
 
-28 marca powołanie XX Bomber Command w Kharagpur Indie.
-10 kwietnia 1944 wyznaczenie  58th Bombardment Wing (Very Heavy) of the XX Bomber Command do Operacji Matterhorn.
-5 czerwca 1944 pierwszy atak z Indii na kolej Makasan w Bangkoku.
-Chiny bazy w Kwanghan, Kuinglai, Hsinching i Pengshan.
-Noc 14/15 czerwca 1944 pierwszy atak z Chin na Japonię: zakłady metalowe w Yawata na Kiusiu.
-Chengdu, Operation Matterhorn,
-W grudniu decyzja o przeniesieniu na Mariany.
-15 stycznia ostatni atak na Tajwan.
+- 28 marca powołanie XX Bomber Command w Kharagpur Indie.
+- 10 kwietnia 1944 wyznaczenie  58th Bombardment Wing (Very Heavy) of the XX Bomber Command do Operacji Matterhorn.
+- 5 czerwca 1944 pierwszy atak z Indii na kolej Makasan w Bangkoku.
+- Chiny bazy w Kwanghan, Kuinglai, Hsinching i Pengshan.
+- Noc 14/15 czerwca 1944 pierwszy atak z Chin na Japonię: zakłady metalowe w Yawata na Kiusiu.
+- Chengdu, Operation Matterhorn,
+- W grudniu decyzja o przeniesieniu na Mariany.
+- 15 stycznia ostatni atak na Tajwan.
+
+Ogółem wyprodukowano ich prawie 4 tys egzemplarzy. Były w służbie do 1960. Zostały zastąpione najpierw przez pierwszy seryjnie produkowany amerykański bombowiec naddźwiękowy Boeing B-47 Stratojet, a potem przez B-52.
+
+Na podstawie czterech samolotów, które awaryjnie wylądowały w sowietach powstała jego wierna kopia - Tu-4.
 
 - Mark Felton Productions ["B-29 Superfortress Operation Against Germany" [YT 10:54]](https://www.youtube.com/watch?v=RKgQBpP5kVs)
 - War Stories with Mark Felton ["Shot Down Over Japan - The Treatment of American Airmen (Episode 1)" [YT 23:09]](https://www.youtube.com/watch?v=8BXB-W8A6K4)
 - AIRBOYD ["B-29 Flight Procedure And Combat Crew Functioning (1944)" [YT 36:51]](https://www.youtube.com/watch?v=pvEQvopucl4)_japanese_empire/)
+- PeriscopeFilm ["GUNNERY IN THE B-29 " ANIMATED B-29 SUPERFORTRESS CREW TURRET COMPUTER TRAINING FILM 19584" [YT 14:26]](https://www.youtube.com/watch?v=mJExsIp4yO8)
 
 ### Japoński program atomowy
 
@@ -139,6 +144,8 @@ Wiosną 1944 Japończycy kupili licencję na samolot rakietowy Me 163B Komet za 
 Mimo niepowodzeń Japończycy kontynuowali pracę nad swoją wersją Kometa - Mitsubishi J8M Shūsui (Ki-200) (pl. "jesienna woda" poetyckie określenie zimnej stali). Podczas oblotu rakietowego myśliwca silnik przestał działać samolot się rozbił a pilot zginął.
 
 Przystąpiono do produkcji seryjnej i wyprodukowano 7 tych samolotów. Nie wzięły udziału w wojnie. Jeden wpadł w ręce US Army i został wywieziony do USA.
+
+- Mark Felton Productions ["Japan's Nazi Rocket Fighter" [YT 11:23]](https://www.youtube.com/watch?v=nggb5atqPro)
 
 #### Jinryū
 
