--- a/src/content/fbarticles/wunderwaffe.mdx
+++ b/src/content/fbarticles/wunderwaffe.mdx
@@ -110,7 +110,7 @@ Alianci nie mieli jak walczyć z tymi samolotami, ale bardzo szybko opracowali p
 
 Prędkość była tak samo zaletą jak i wadą, z taką różnicą prędkości celowanie było bardzo utrudnione. Próbowano zoptymalizować broń montując Sondergerät 500 Jägerfaust - było to 10 jednostrzałowych, bezodrzutowych dział z krótką lufą 50 mm skierowanych ku górze, uruchamiała je fotokomórka. Zasada była prosta: Komet wlatuje pod bombowiec, fotokomórka automatycznie odpala działa. Znany jest tylko jeden przypadek zastosowania tej broni. 10 kwietnia zniszczyła brytyjskiego Lancastera.
 
-- Mark Felton Productions ["Mustang vs. Komet - Germany 1944" [YT 5:30]](https://www.youtube.com/watch?v=bNw3a_07OjI)
+- Mark Felton Productions ["Japan's Nazi Rocket Fighter" [YT 11:23]](https://www.youtube.com/watch?v=nggb5atqPro) | ["Mustang vs. Komet - Germany 1944" [YT 5:30]](https://www.youtube.com/watch?v=bNw3a_07OjI)
 - Dark Skies ["Me 163 Komet - The Secret Nazi Rocket Fighter - Fastest Plane of WW2" [YT 12:51]](https://www.youtube.com/watch?v=D5sBgPECdtk)
 
 ### Heinkel He 162 Spatz
