--- a/src/content/fbposts/04-18.mdx
+++ b/src/content/fbposts/04-18.mdx
@@ -36,6 +36,12 @@ Główne siły uderzeniowe 1 Frontu Ukraińskiego wykorzystują przełamanie pod
 
 2 Armia WP na swoim odcinku uzyskała kolejne 10 km.
 
+### Robert Capa
+
+FBTODO
+
+[ https://www.facebook.com/TheTruthInColor/posts/4106896612681417 ]
+
 ### Samobójstwa hitlerowców
 
 Trwa bitwa o Lipsk, nieliczne punkty oporu zażarcie walczą z wojskami amerykańskimi, ale wynik jest oczywisty. Lipsk padnie następnego dnia.
