--- a/src/content/fbposts/05-02.mdx
+++ b/src/content/fbposts/05-02.mdx
@@ -46,6 +46,7 @@ Jewgienij Ananjewicz Chałdiej wykonał jedną z najbardziej znanych fotografii 
 Ze względu na żydowskie pochodzenie Chałdiej znalazł się w niełasce władz sowieckich, więc przez cały okres powojenny aż do upadku ZSRR nie było prawidłowej atrybucji zdjęcia. Dopiero po upadku ZSRR na szczęście wciąż żyjący autor doczekał się uznania. W 1995 organizowano spotkanie z Joe Rosenthalem, autorem Sztandaru nad Iwo Jimą, którym Chałdiej się inspirował. Zmarł w 1997.
 
 - [Sztandar nad Reichstagiem](https://pl.wikipedia.org/wiki/Sztandar_nad_Reichstagiem)
+- Vox ["Why the Soviets doctored this iconic photo" [YT 4:46]](https://www.youtube.com/watch?v=4HchGsN7eM4)
 
 ### Bunkier
 
