--- a/src/content/pagearticles/francais-internet.mdx
+++ b/src/content/pagearticles/francais-internet.mdx
@@ -422,7 +422,6 @@ RTL
 - [InterPals PenPals](https://www.interpals.net/)
 
 HOWTO
------
 
 ### Francais
 
@@ -448,7 +447,6 @@ HOWTO
 - [EuroCheapo | France Budget Travel Guide](http://www.eurocheapo.com/blog/category/france)
 
 Paris
------
 
 ### Officiel, et en francais
 
@@ -496,6 +494,7 @@ Paris
 - [Paris 1800 - jeu de société dédié à Paris - 100% auto édité](http://paris1800.fr/)
 - [Saint Denis Ma Ville – Le blog par et pour les habitants de St Denis (93)](https://www.saintdenismaville.com/)
 - [One man show en anglais - Spectacle solo &agrave; Paris avec Julie Collas](https://www.juliecollas.com/)
+- The Dragon Historian ["The History of Paris: Every Year" [YT 8:10]](https://www.youtube.com/watch?v=Nd4jfE6MWNY)
 
 ### In English
 
