--- a/src/content/pagearticles/git.mdx
+++ b/src/content/pagearticles/git.mdx
@@ -249,9 +249,9 @@ Pozostaje jeszcze do rozwiązania jeden problem, otóż VSC pokazuje tysiące oc
 
 #### Youtube
 
-- **Kanały:*- [Dan Gitschooldude [YT (3)]](https://www.youtube.com/channel/UCshmCws1MijkZLMkPmOmzbQ/)
-- **Playlisty:*- [The Coding Train - Git and GitHub for Poets (playlista YT)](https://www.youtube.com/playlist?list=PLRqwX-V7Uu6ZF9C0YMKuns9sLDzK6zoiV) | [Git Tutorial [YT playlist]](https://www.youtube.com/playlist?list=PL3Y9MECuxct0RMwdYcqoIjo-7ncRpTNLs) | [Imran Sayed "Git Tutorial Playlist" [YT playlist 12 filmów]](https://www.youtube.com/playlist?list=PLD8nQCAhR3tTnEVPP6BtXaeiMDL--X_Wb) | [codedamn "Git / GitHub" [YT playlist 5 filmów]](https://www.youtube.com/playlist?list=PLYxzS__5yYQlLUz4Sy5YK6MQHWg-u7xST) | [Bhavesh Bhatt "GIT - Version Control" [YT playlista 1 film]](https://www.youtube.com/playlist?list=PLreVlKwe2Z0T7_vMK5cBFYYiL55HKyzHQ) | [Code SOS "Git Tutorials" [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PLmAPv1TrFSAbQxCjqWa4qbHxoWM2AEmGQ) | [The Nerdy Dev "Demystifying Git Tutorials For Beginners" [YT playlista 4 filmy]](https://www.youtube.com/playlist?list=PLXgqhtspYCM9z7aFaotMZB_l-9fPEnfHf) | [Better Coding Academy "Learn Git" [YT playlist 8 filmów]](https://www.youtube.com/playlist?list=PLnTRniWXnjf_abqo7qnrPsqo148VRYxjv) | [Dave Gray "Git and GitHub Tutorials for Beginners" [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PL0Zuz27SZ-6PkWWk_mA2vkimUTJf81mNz) | [Ihatetomatoes "Git Tutorials" [YT playlist 13 filmów]](https://www.youtube.com/playlist?list=PLkEZWD8wbltmcZQaA0ism9k2E6MGRnHZ7) | [Zaprogramuj Życie "Kurs Gita w praktyce" [YT playlist 13 filmów]](https://www.youtube.com/playlist?list=PLj-pbEqbjo6AKsJ8oE2pvIqsb15mxdrxs)
-- **Filmy:*- [hello roman "Git i GitHub – podstawy ⌨️ hello roman #92" [34:01]](https://www.youtube.com/watch?v=9qrgY2Dw30g) | [Maciej Aniserowicz "Jak pracować z GITem? (i innymi systemami kontroli wersji) [devstyle LIVE]" [YT 19:02]](https://www.youtube.com/watch?v=X7t2Yf8E7ts) | [Academind "Git Tutorial for Beginners - The Basics" [47:07]](https://www.youtube.com/watch?v=ly4niPr9vUo) | [Programming with Mosh "Git Tutorial for Beginners: Learn Git in 1 Hour" [YT 1:09:13]](https://www.youtube.com/watch?v=8JJ101D3knE) | [[Linux.conf.au 2013] - Git For Ages 4 And Up [YT 1:39:42]](https://www.youtube.com/watch?v=1ffBJ4sVUb4) | [Git Tutorial 1 - Introduction to Git 6:28](https://www.youtube.com/watch?v=h81JR0hEgtI) | [[ GITHUB VS GIT | What are they? (8"48)]](https://www.youtube.com/watch?v=MQWrY3aiFxQ) | ["Deep Dive into Git - Edward Thomson" [YT 1:00:02]](https://www.youtube.com/watch?v=fBP18-taaNw) | [Learn Git in 20 Minutes [YT 17:52]](https://www.youtube.com/watch?v=Y9XZQO1n_7c) | [Academind "Git MERGE vs REBASE" [YT 16:11]](https://www.youtube.com/watch?v=CRlGDDprdOQ) | [Nirlo "DevOps vs Git: How To Use Branches" [YT 18:29]](https://www.youtube.com/watch?v=sObNoF8spWI) | [overment "Szybki start z Git Hooks - łatwy deployment | overment" [YT 4:10]](https://www.youtube.com/watch?v=nqUm5uzxrBw) | infoShare Academy ["GIT - podstawy, zdalne repozytoria, gałęzie i łączenie zmian w 20 minut" [YT 20:22]](https://www.youtube.com/watch?v=TyI6y0k3U00)
+- **Kanały:** [Dan Gitschooldude [YT (3)]](https://www.youtube.com/channel/UCshmCws1MijkZLMkPmOmzbQ/)
+- **Playlisty:** [The Coding Train - Git and GitHub for Poets (playlista YT)](https://www.youtube.com/playlist?list=PLRqwX-V7Uu6ZF9C0YMKuns9sLDzK6zoiV) | [Git Tutorial [YT playlist]](https://www.youtube.com/playlist?list=PL3Y9MECuxct0RMwdYcqoIjo-7ncRpTNLs) | [Imran Sayed "Git Tutorial Playlist" [YT playlist 12 filmów]](https://www.youtube.com/playlist?list=PLD8nQCAhR3tTnEVPP6BtXaeiMDL--X_Wb) | [codedamn "Git / GitHub" [YT playlist 5 filmów]](https://www.youtube.com/playlist?list=PLYxzS__5yYQlLUz4Sy5YK6MQHWg-u7xST) | [Bhavesh Bhatt "GIT - Version Control" [YT playlista 1 film]](https://www.youtube.com/playlist?list=PLreVlKwe2Z0T7_vMK5cBFYYiL55HKyzHQ) | [Code SOS "Git Tutorials" [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PLmAPv1TrFSAbQxCjqWa4qbHxoWM2AEmGQ) | [The Nerdy Dev "Demystifying Git Tutorials For Beginners" [YT playlista 4 filmy]](https://www.youtube.com/playlist?list=PLXgqhtspYCM9z7aFaotMZB_l-9fPEnfHf) | [Better Coding Academy "Learn Git" [YT playlist 8 filmów]](https://www.youtube.com/playlist?list=PLnTRniWXnjf_abqo7qnrPsqo148VRYxjv) | [Dave Gray "Git and GitHub Tutorials for Beginners" [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PL0Zuz27SZ-6PkWWk_mA2vkimUTJf81mNz) | [Ihatetomatoes "Git Tutorials" [YT playlist 13 filmów]](https://www.youtube.com/playlist?list=PLkEZWD8wbltmcZQaA0ism9k2E6MGRnHZ7) | [Zaprogramuj Życie "Kurs Gita w praktyce" [YT playlist 13 filmów]](https://www.youtube.com/playlist?list=PLj-pbEqbjo6AKsJ8oE2pvIqsb15mxdrxs)
+- **Filmy:** [hello roman "Git i GitHub – podstawy ⌨️ hello roman #92" [34:01]](https://www.youtube.com/watch?v=9qrgY2Dw30g) | [Maciej Aniserowicz "Jak pracować z GITem? (i innymi systemami kontroli wersji) [devstyle LIVE]" [YT 19:02]](https://www.youtube.com/watch?v=X7t2Yf8E7ts) | [Academind "Git Tutorial for Beginners - The Basics" [47:07]](https://www.youtube.com/watch?v=ly4niPr9vUo) | [Programming with Mosh "Git Tutorial for Beginners: Learn Git in 1 Hour" [YT 1:09:13]](https://www.youtube.com/watch?v=8JJ101D3knE) | [[Linux.conf.au 2013] - Git For Ages 4 And Up [YT 1:39:42]](https://www.youtube.com/watch?v=1ffBJ4sVUb4) | [Git Tutorial 1 - Introduction to Git 6:28](https://www.youtube.com/watch?v=h81JR0hEgtI) | [[ GITHUB VS GIT | What are they? (8"48)]](https://www.youtube.com/watch?v=MQWrY3aiFxQ) | ["Deep Dive into Git - Edward Thomson" [YT 1:00:02]](https://www.youtube.com/watch?v=fBP18-taaNw) | [Learn Git in 20 Minutes [YT 17:52]](https://www.youtube.com/watch?v=Y9XZQO1n_7c) | [Academind "Git MERGE vs REBASE" [YT 16:11]](https://www.youtube.com/watch?v=CRlGDDprdOQ) | [Nirlo "DevOps vs Git: How To Use Branches" [YT 18:29]](https://www.youtube.com/watch?v=sObNoF8spWI) | [overment "Szybki start z Git Hooks - łatwy deployment | overment" [YT 4:10]](https://www.youtube.com/watch?v=nqUm5uzxrBw) | infoShare Academy ["GIT - podstawy, zdalne repozytoria, gałęzie i łączenie zmian w 20 minut" [YT 20:22]](https://www.youtube.com/watch?v=TyI6y0k3U00) | freeCodeCamp.org  ["Git Branches Tutorial" [YT 33:18]](https://www.youtube.com/watch?v=e2IbNHi4uCI)
 
 #### .gitignore
 
