--- a/src/content/pagearticles/historiait-komputery.mdx
+++ b/src/content/pagearticles/historiait-komputery.mdx
@@ -846,3 +846,7 @@ System operacyjny hitem pop-kultury: 23 sierpnia media opisywały, jak w kolejka
 1998 roku i-Mac, rewolucja wzornictwa komputerów.
 
 W 1997 roku zwycięstwo maszyny z mistrzem świata w szachach. Gari Kasparow przegrał sześciorundowy mecz z superkomputerem Deep Blue. Po raz pierwszy maszyna pokonał gracza tej klasy w spotkaniu turniejowym.
+
+### Odnośniki
+
+- PeriscopeFilm ["DIGITAL COMPUTER TECHNIQUES & PRINCIPLES 1962 U.S. NAVY FILM UNIVAC IBM ELECTRODATA 90714" [YT 16:55]](https://www.youtube.com/watch?v=hTJi7Ct6MfY)
