--- a/src/content/pagearticles/kryptologia-aneks.mdx
+++ b/src/content/pagearticles/kryptologia-aneks.mdx
@@ -55,7 +55,7 @@ Komercyjna sfera internetu, różnego rodzaju instytucje finansowe, sklepy i ban
 FreeS/WAN
 
 Najbardziej znana implementacja IPsec, już nie rozwijana.
-Kontynuacją są projekty Openswan \[[www.openswan.org](http://www.openswan.org/)\] i Strongswan \[[www.strongswan.org](http://www.strongswan.org/)\]
+Kontynuacją są projekty Openswan [[www.openswan.org](http://www.openswan.org/)] i Strongswan [[www.strongswan.org](http://www.strongswan.org/)]
 
 funkcja haszująca (ang. _hash function_)
 
@@ -83,7 +83,7 @@ generator liczb pseudolosowych (ang. _pseudo random number generator_ - _PRNG_)
 
 Procedura generująca sekwencję wartości numerycznych wyglądającą na przypadkową, prawie nie do przewidzenia; najczęściej używa się to do tego tzw. ziarna (ang. _seed_), czyli czysto losowej wartości (np. pochodzącej ze zdarzeń systemowych), która następnie jest przetwarzana.
 
-GPG (GNU Privacy Guard) \[[www.gnupg.org](http://www.gnupg.org/)\]
+GPG (GNU Privacy Guard) [[www.gnupg.org](http://www.gnupg.org/)]
 
 Darmowy i kompletny zamiennik PGP; program Free Software Foundation zgodny ze standardem OpenPGP opublikowany na licencji GPL, wspierany przez niemiecki rząd, częśc projektu GNU.
 GnuPG wspiera następujące algorytmy: ElGamal, DSA, RSA, AES, 3DES, Blowfish, Twofish, CAST5, MD5, SHA-1, RIPE-MD-160, TIGER.
@@ -130,8 +130,8 @@ IPsec jest obligatoryjnym standardem IPv6 i opcjonalny dla IPv4, więc stanie si
 Protokoły IPsec operują na trzecim poziomie modelu OSI dzięki czemu mogą chronić protokoły oparte zarówno na zarówno TCP i UDP.
 Implementacje:
 
-- [FreeS/WAN](http://www.freeswan.org/) zakończony w marcu 2004 - jego kontynuacją są Openswan \[[www.openswan.org](http://www.openswan.org/)\] i Strongswan \[[www.strongswan.org](http://www.strongswan.org/)\]
-- KAME \[[www.kame.net](http://www.kame.net/)\] włączony w projekty NetBSD i FreeBSD oraz kernel 2.6
+- [FreeS/WAN](http://www.freeswan.org/) zakończony w marcu 2004 - jego kontynuacją są Openswan [[www.openswan.org](http://www.openswan.org/)] i Strongswan [[www.strongswan.org](http://www.strongswan.org/)]
+- KAME [[www.kame.net](http://www.kame.net/)] włączony w projekty NetBSD i FreeBSD oraz kernel 2.6
 
 
 [IPsec (pl.)](http://pl.wikipedia.org/wiki/IPsec), [IPsec (eng.)](http://en.wikipedia.org/wiki/IPsec), [www.ipsec.pl](http://www.ipsec.pl/)
@@ -141,7 +141,7 @@ KDF (Key Derivation Function)
 Tworzy klucz na podstawie hasła wymyślonego przez użytkownika, poddając je wielokrotnym przekształceniom w celu utrudnienia ataku BF.
 [Key_derivation_function](http://en.wikipedia.org/wiki/Key_derivation_function)
 
-Kerberos (Kerberos: The Network Authentication Protocol) \[[web.mit.edu/kerberos/www/](http://web.mit.edu/kerberos/www/)\]
+Kerberos (Kerberos: The Network Authentication Protocol) [[web.mit.edu/kerberos/www/](http://web.mit.edu/kerberos/www/)]
 
 Powstały w MIT (Massachusetts Institute of Technology) w celu ochrony usług sieciowych projektu Athena protokół uwierzytelniania obiektów w sieci komputerowej.
 Pozwala na komunikację przez niezabezpieczoną sieć i potwierdzenia swojej tożsamości w bezpieczny sposób, zapobiega podsłuchiwaniu lub atakom przez powtórzenie (ang. _replay attacks_) i zapewnia integralność danych; zaprojektowany pierwotnie dla sieci klient-serwer i zapewnia wzajemne uwierzytelnienie - dotyczące zarówno użytkownik jak i usługi z której korzysta.
@@ -227,9 +227,9 @@ Lokalna sieć komputerowa.
 Proces odzyskiwania haseł, może służyć użytkownikowi do odzyskania zapomnianego hasła, włamywaczowi do przejęcia kontroli nad zasobami oraz administratorowi do prewencyjnego testowania siły haseł wybieranych przez użytkowników. Stosowane techniki: SE, podsłuchiwanie, keyloggery, fałszywe terminale logowania itp.
 Popularne programy (uwaga: nieostrożne używanie technik lub programów służących do łamania haseł może spowodować problemy prawne):
 
-- Crack / CrackLib \[[www.crypticide.com/users/alecm/](http://www.crypticide.com/users/alecm/)\]
-- John the Ripper password cracker \[[www.openwall.com/john/](http://www.openwall.com/john/)\]
-- Lepton's Crack \[[usuarios.lycos.es/reinob/](http://usuarios.lycos.es/reinob/)\]
+- Crack / CrackLib [[www.crypticide.com/users/alecm/](http://www.crypticide.com/users/alecm/)]
+- John the Ripper password cracker [[www.openwall.com/john/](http://www.openwall.com/john/)]
+- Lepton's Crack [[usuarios.lycos.es/reinob/](http://usuarios.lycos.es/reinob/)]
 
 [Password_cracking](http://en.wikipedia.org/wiki/Password_cracking)
 
@@ -273,7 +273,7 @@ OpenPGP
 Opublikowany standard (RFC 2440) programu kryptograficznego powstały by zapewnić interoperacyjność pomiędzy programami i wtyczkami.
 Używany przez PGP, GNU Privacy Guard (GnuPG), Hushmail, Veridis i innych; powstał z powodu szerokiego użycia PGP aby standard kryptograficzny stał się własnością wspólnoty.
 
-OpenSSH \[[openssh.com](http://openssh.com/)\]
+OpenSSH [[openssh.com](http://openssh.com/)]
 
 Zintegrowany zestaw aplikacji powstały w ramach projektu OpenBSD - udostępniana na wolnej licencji implementacja SSH.
 
@@ -368,16 +368,16 @@ snifer (ang. sniffer)
 Program służący do analizy ruchu sieciowego, przez przechwytywanie, rejestrowanie i analizowanie pakietów przepływających w sieci. Narzędzie diagnostyczne używane przez administratorów sieci jak i również przez włamywaczy; może służyć również zwykłym użytkownikom do sprawdzenia czy i w jaki sposób działa szyfrowany kanał komunikacji.
 Nazwa po polsku oznacza węszyciel i prawdopodobnie pochodzi od komercyjnego programu Sniffer (produkcji Network Associates, Inc.).
 [Packet_sniffer (eng.)](http://en.wikipedia.org/wiki/Packet_sniffer), [Sniffer (pl.)](http://pl.wikipedia.org/wiki/Sniffer)
-[.:\[ packet storm \]:.](http://packetstormsecurity.com/), [insecure.org: Top 75 Security Tools](http://www.insecure.org/tools.html)
+[.:[ packet storm ]:.](http://packetstormsecurity.com/), [insecure.org: Top 75 Security Tools](http://www.insecure.org/tools.html)
 Przykładowe sniffery (uwaga: nieostrożne użycie może spowodować problemy prawne):
 
-- dsniff: \[[www.monkey.org/~dugsong/dsniff/](http://www.monkey.org/~dugsong/dsniff/)\]
-- EtherApe \[[etherape.sourceforge.net](http://etherape.sourceforge.net/)\]
-- Ethereal \[[www.ethereal.com](http://www.ethereal.com/)\]
-- ettercap \[[ettercap.sourceforge.net](http://ettercap.sourceforge.net/)\]
-- Sniffit \[[reptile.rug.ac.be/~coder/sniffit/sniffit.html](http://reptile.rug.ac.be/~coder/sniffit/sniffit.html)\]
-- Snort \[[www.snort.org](http://www.snort.org/)\] [Network Monitoring with Snort](http://www.linux-mag.com/2003-05/guru_01.html)
-- tcdump \[[www.tcpdump.org](http://www.tcpdump.org/)\]
+- dsniff: [[www.monkey.org/~dugsong/dsniff/](http://www.monkey.org/~dugsong/dsniff/)]
+- EtherApe [[etherape.sourceforge.net](http://etherape.sourceforge.net/)]
+- Ethereal [[www.ethereal.com](http://www.ethereal.com/)]
+- ettercap [[ettercap.sourceforge.net](http://ettercap.sourceforge.net/)]
+- Sniffit [[reptile.rug.ac.be/~coder/sniffit/sniffit.html](http://reptile.rug.ac.be/~coder/sniffit/sniffit.html)]
+- Snort [[www.snort.org](http://www.snort.org/)] [Network Monitoring with Snort](http://www.linux-mag.com/2003-05/guru_01.html)
+- tcdump [[www.tcpdump.org](http://www.tcpdump.org/)]
 
 sól (ang. _salt_)
 
@@ -561,7 +561,7 @@ Ataki na MD5:
 
 - w 1996 roku Dobbertin zaprezentował analizę kolizji funkcji haszującej algorytmu MD5 - nie był to jeszcze pełny atak na funkcję haszującą to jednak wystarczył, aby specjaliści w dziedzinie kryptografii zaczęli stosować silniejsze odpowiedniki
 - w marcu 2004 roku powstał rozproszony projekt nazywany MD5CRK - twórcą projektu był Jean-Luc Cooke i jego współpracownicy - miał on na celu wykazanie, że możliwe jest takie spreparowanie drugiej wiadomości na podstawie wiadomości wyjściowej aby obie dały ten sam skrót; używając internetu wykazano, że dysponując bardzo dużą mocą obliczeniową możliwe jest podrabianie generowanych podpisów.
-- 17 sierpnia 2004 chińscy naukowcy (Xiaoyun Wang, Dengguo Fen, Xuejia Lai i Hongbo Yu) opublikowali analityczny algorytm ataku, dzięki któremu do podrobienia podpisu wystarczyła godznia działania klastrowego komputera IBM P690; [\[1\] PDF](http://eprint.iacr.org/2004/199.pdf), [\[2\] PDF](http://eprint.iacr.org/2004/264.pdf). \[note that Wang et al's attack is a collision attack and not a preimage attack\]
+- 17 sierpnia 2004 chińscy naukowcy (Xiaoyun Wang, Dengguo Fen, Xuejia Lai i Hongbo Yu) opublikowali analityczny algorytm ataku, dzięki któremu do podrobienia podpisu wystarczyła godznia działania klastrowego komputera IBM P690; [[1] PDF](http://eprint.iacr.org/2004/199.pdf), [[2] PDF](http://eprint.iacr.org/2004/264.pdf). [note that Wang et al's attack is a collision attack and not a preimage attack]
 
 128 bitów jest uważane za zbyt mało, żeby zabezpieczyć przed kolizjami, dlatego do większości zastosowań lepiej jest używać funkcji zwracającej co najmniej 160 bitów.
 Sprawdzanie integralności: skrót MD5 jest często stosowany przy dystrybucji oprogramowania dla zapewnienia, że sprowadzony z internetu plik nie został zmieniony - dzięki porównaniu opublikowanego skrótu z sumą kontrolną sprowadzonego pliku można było upewnić się, że jest to ten sam plik, który opublikowali programiści; chroniło to nie tylko przed podmianą ale także przez zwykłym popsuciem pliku w czasie transferu lub niekompletnym transferem., żeby zweryfikować integralność plików należy sprowadzić plik MD5SUM do tego samego katalogu co sprawdzany plik i użyć programu MD5 (w systemach uniksowych polecenie md5sum).
@@ -804,11 +804,11 @@ Inne:
 
 ##### YT
 
-- [Numberphile "Cryptography on Numberphile and Computerphile" \[YT playlist 16 filmów\]](https://www.youtube.com/playlist?list=PLt5AfwLFPxWLXe-ZqZyu0kSsaWd4FjXbj)
-- [AlwaysAsking Security "The Magic of Math in Modern Cryptography" \[YT 55:02\]](https://www.youtube.com/watch?v=mSMQ-xowqAg)
-- [Amazon Polska "Szyfrowanie na kartce" \[YT 1:11:17\]](https://www.youtube.com/watch?v=Dt1kBG801n4)
-- [Pasja informatyki "Seria hakerska - Capture The Flag" \[YT playlist 5 filmów\]](https://www.youtube.com/playlist?list=PLOYHgt8dIdowr-LCIN4bqSFmj-FSTG9Qn)
-- Computerphile ["AES Explained (Advanced Encryption Standard) - Computerphile" \[YT 14:13\]](https://www.youtube.com/watch?v=O4xNJsjtN6E) | ["Secret Key Exchange (Diffie-Hellman) - Computerphile" \[8:39\]](https://www.youtube.com/watch?v=NmM9HA2MQGI) | ["Diffie Hellman -the Mathematics bit- Computerphile" \[YT 7:04\]](https://www.youtube.com/watch?v=Yjrfm_oRO0w) | ["One Encryption Standard to Rule Them All! - Computerphile" \[YT 9:10\]](https://www.youtube.com/watch?v=VYech-c5Dic)
+- [Numberphile "Cryptography on Numberphile and Computerphile" [YT playlist 16 filmów]](https://www.youtube.com/playlist?list=PLt5AfwLFPxWLXe-ZqZyu0kSsaWd4FjXbj)
+- [AlwaysAsking Security "The Magic of Math in Modern Cryptography" [YT 55:02]](https://www.youtube.com/watch?v=mSMQ-xowqAg)
+- [Amazon Polska "Szyfrowanie na kartce" [YT 1:11:17]](https://www.youtube.com/watch?v=Dt1kBG801n4)
+- [Pasja informatyki "Seria hakerska - Capture The Flag" [YT playlist 5 filmów]](https://www.youtube.com/playlist?list=PLOYHgt8dIdowr-LCIN4bqSFmj-FSTG9Qn)
+- Computerphile ["AES Explained (Advanced Encryption Standard) - Computerphile" [YT 14:13]](https://www.youtube.com/watch?v=O4xNJsjtN6E) | ["Secret Key Exchange (Diffie-Hellman) - Computerphile" [8:39]](https://www.youtube.com/watch?v=NmM9HA2MQGI) | ["Diffie Hellman -the Mathematics bit- Computerphile" [YT 7:04]](https://www.youtube.com/watch?v=Yjrfm_oRO0w) | ["One Encryption Standard to Rule Them All! - Computerphile" [YT 9:10]](https://www.youtube.com/watch?v=VYech-c5Dic)
 
 ##### Narzędzia
 
@@ -821,41 +821,41 @@ Inne:
 - [ENIGMA](https://www.codeproject.com/Articles/831015/ENIGMA)
 - [Autoencoder](https://www.npmjs.com/package/@softnami/autoencoder)
 - [alichtman / deadbolt - file encryption tool](https://github.com/alichtman/deadbolt)
-- Computerphile ["Turing's Enigma Problem (Part 1) - Computerphile" \[YT 18:59\]](https://www.youtube.com/watch?v=d2NWPG2gB_A) | ["Tackling Enigma (Turing's Enigma Problem Part 2) - Computerphile" \[YT 22:48\]](https://www.youtube.com/watch?v=kj_7Jc1mS9k) | ["Cracking Enigma in 2021 - Computerphile" \[YT 21:19\]](https://www.youtube.com/watch?v=RzWB5jL5RX0)
-- World Science Festival ["The Enigma Machine Explained" \[YT 7:58\]](https://www.youtube.com/watch?v=ASfAPOiq_eQ)
-- Talks at Google ["Enigma Cipher Machine History | Ralph Simpson | Talks at Google" \[YT 1:16:06\]](https://www.youtube.com/watch?v=lsv_Li2FXzw)
-- tnmoc ["The real story of how Enigma was broken - Sir Dermot Turing" \[YT 1:07:49\]](https://www.youtube.com/watch?v=qn_BBQEjCxI)
-- Numberphile ["158,962,555,217,826,360,000 (Enigma Machine) - Numberphile" \[YT 11:51\]](https://www.youtube.com/watch?v=G2_Q9FoD-oQ) | ["Flaw in the Enigma Code - Numberphile" \[YT 10:58\]](https://www.youtube.com/watch?v=V4V2bpZlqx8) | ["Enigma Extra Footage - Numberphile" \[YT 8:23\]](https://www.youtube.com/watch?v=BdrrJ7qd4HA)
-- Videos By Kevin ["Paper Enigma Machine" \[YT 17:08\]](https://www.youtube.com/watch?v=UKbP3Rjxhy0)
-- Perimeter Institute for Theoretical Physics ["The Inner Workings of an Enigma Machine" \[YT 14:03\]](https://www.youtube.com/watch?v=mcX7iO_XCFA)
-- UC Davis ["The Enigma Code" \[YT 1:05:15\]](https://www.youtube.com/watch?v=ncL2Fl6prH8)
-- The Centre for Computing History ["Colossus - The Greatest Secret in the History of Computing" \[YT 1:00:26\]](https://www.youtube.com/watch?v=g2tMcMQqSbA)
-- Skeptic ["Dr. Andrew Hodges — Alan Turing: The Enigma" \[YT 1:39:22\]](https://www.youtube.com/watch?v=3NODW5sok5U)
-- Corvus ["How the Enigma machine works | Animation" \[YT 5:31\]](https://www.youtube.com/watch?v=QwQVMqfoB2E)
-- Doyle New York ["Enigma Machine Demonstration" \[YT 3:03\]](https://www.youtube.com/watch?v=-mdSvGUd0_c)
-- ajpitv ["Jak działa Enigma?" \[YT 6:26\]](https://www.youtube.com/watch?v=hMBXHSEi9b8)
-- [TechLving "How does the ENIGMA MACHINE work in the IMITATION GAME | MOVIE TECH" \[YT 13:00\]](https://www.youtube.com/watch?v=GcI-YlFSGYo)
-- [CBS Sunday Morning "The enigma of WWII codebreaker Alan Turing" \[YT 7:30\]](https://www.youtube.com/watch?v=nEomYB94TTI)
-- World War Two ["The Battle to Crack Enigma - The real story of 'The Imitation Game' - WW2 Special" \[9:40\]](https://www.youtube.com/watch?v=zALecS762ME)
-- PolisMultimedia ["IGF 2011: Jak łamie się szyfry - omówienie na przykładzie maszyny rotorowej Enigma" \[YT 2:22\]](https://www.youtube.com/watch?v=YU6GXeXji1c)
-- Code Bullet ["Building an Enigma Machine" \[YT 12:07\]](https://www.youtube.com/watch?v=2D2bJWHvqJo)
-- Dave Janelle ["Enigma II Encryption Machine & Puzzle - encode & decode cipher" \[YT 9:22\]](https://www.youtube.com/watch?v=hiOjqskDlS0) | ["Enigma Slide Rule Iinear Cipher Encryption machine" \[YT 9:18\]](https://www.youtube.com/watch?v=NbF_l7gss_A) | ["Enigma V Encryption machine with $150 solution challenge" \[YT 6:17\]](https://www.youtube.com/watch?v=E016UyT-eUU)
-- VilleKoo Virtanen ["How Enigma Works" \[YT 0:20\]](https://www.youtube.com/watch?v=uMPw0ObNJbQ)
-- Videos By Kevin ["Pringles Can Enigma Machine" \[8:38\]](https://www.youtube.com/watch?v=pZsuxZXN33g)
-- Bletchley Park ["The Enigma Machine - Bletchley Park takes a closer look at how it works" \[YT 17:29\]](https://www.youtube.com/watch?v=3Ux03qPgYVY)
-- G B ["How Alan Turing Cracked the Enigma Code Using Statistics" \[YT 6:56\]](https://www.youtube.com/watch?v=QIrC-8T_hqk)
-- PA3DMI ["Bletchley Park Tour \[docu in full\]" \[YT 1:13:51\]](https://www.youtube.com/watch?v=OuEHcJ7CCzg)
-- asciimation ["3D printed Enigma rotors." \[YT 17:53\]](https://www.youtube.com/watch?v=ncVOl6DNg88)
-- Gazeta Olsztyńska ["Oryginalna maszyna szyfrująca Enigma w Olsztynie." \[YT 4:42\]](https://www.youtube.com/watch?v=T6nGGQXmOEs)
-- Wirtualna Polska ["Sekrety maszyn szyfrujących \[Enigma\]" \[YT 16:50\]](https://www.youtube.com/watch?v=N9sLPtJDcbY)
-- ledermueller ["Enigma Machine Mechanism (feat. a 'Double Step')" \[YT 0:39\]](https://www.youtube.com/watch?v=hcVhQeZ5gI4)
-- Gideon Samid ["The ENIGMA of Modern Cryptography" \[YT 8:05\]](https://www.youtube.com/watch?v=ShOnhOGRXHk)
-- Sergio Morales ["Arduino 3D printed Enigma Machine" \[YT 4:59\]](https://www.youtube.com/watch?v=k2SRl5kKgS8)
-- opensources [Building an Enigma emulator and a Bombe](https://opensourc.es/blog/enigma-and-bombe/) | ["Enigma: Endless possibilities is not enough" \[YT 9:09\]](https://www.youtube.com/watch?v=4cf7dc_8u44) | ["How to crack the Enigma cipher?" \[YT 11:22\]](https://www.youtube.com/watch?v=bRT5YKez8m4)
-- Henry Hollingworth [Enigma machine videos \[YT playlist 3 filmy\]](https://www.youtube.com/playlist?list=PLBHQNO2azpeLzJUI4K_t8ynGfHIpXkwtF)
-- Shaun Durrani ["Paper Enigma Machine - CS430" \[YT 14:59\]](https://www.youtube.com/watch?v=cVdjxMjSQNo)
-- I Attenborough ["Building Enigma Machine using pringles tube" \[YT 4:07\]](https://www.youtube.com/watch?v=z1ehM1pHrIU)
-- Stanford ["Turing: Pioneer of the Information Age" \[YT 1:36:38\]](https://www.youtube.com/watch?v=p7Lv9GxigYU)
+- Computerphile ["Turing's Enigma Problem (Part 1) - Computerphile" [YT 18:59]](https://www.youtube.com/watch?v=d2NWPG2gB_A) | ["Tackling Enigma (Turing's Enigma Problem Part 2) - Computerphile" [YT 22:48]](https://www.youtube.com/watch?v=kj_7Jc1mS9k) | ["Cracking Enigma in 2021 - Computerphile" [YT 21:19]](https://www.youtube.com/watch?v=RzWB5jL5RX0)
+- World Science Festival ["The Enigma Machine Explained" [YT 7:58]](https://www.youtube.com/watch?v=ASfAPOiq_eQ)
+- Talks at Google ["Enigma Cipher Machine History | Ralph Simpson | Talks at Google" [YT 1:16:06]](https://www.youtube.com/watch?v=lsv_Li2FXzw)
+- tnmoc ["The real story of how Enigma was broken - Sir Dermot Turing" [YT 1:07:49]](https://www.youtube.com/watch?v=qn_BBQEjCxI)
+- Numberphile ["158,962,555,217,826,360,000 (Enigma Machine) - Numberphile" [YT 11:51]](https://www.youtube.com/watch?v=G2_Q9FoD-oQ) | ["Flaw in the Enigma Code - Numberphile" [YT 10:58]](https://www.youtube.com/watch?v=V4V2bpZlqx8) | ["Enigma Extra Footage - Numberphile" [YT 8:23]](https://www.youtube.com/watch?v=BdrrJ7qd4HA)
+- Videos By Kevin ["Paper Enigma Machine" [YT 17:08]](https://www.youtube.com/watch?v=UKbP3Rjxhy0)
+- Perimeter Institute for Theoretical Physics ["The Inner Workings of an Enigma Machine" [YT 14:03]](https://www.youtube.com/watch?v=mcX7iO_XCFA)
+- UC Davis ["The Enigma Code" [YT 1:05:15]](https://www.youtube.com/watch?v=ncL2Fl6prH8)
+- The Centre for Computing History ["Colossus - The Greatest Secret in the History of Computing" [YT 1:00:26]](https://www.youtube.com/watch?v=g2tMcMQqSbA)
+- Skeptic ["Dr. Andrew Hodges — Alan Turing: The Enigma" [YT 1:39:22]](https://www.youtube.com/watch?v=3NODW5sok5U)
+- Corvus ["How the Enigma machine works | Animation" [YT 5:31]](https://www.youtube.com/watch?v=QwQVMqfoB2E)
+- Doyle New York ["Enigma Machine Demonstration" [YT 3:03]](https://www.youtube.com/watch?v=-mdSvGUd0_c)
+- ajpitv ["Jak działa Enigma?" [YT 6:26]](https://www.youtube.com/watch?v=hMBXHSEi9b8)
+- [TechLving "How does the ENIGMA MACHINE work in the IMITATION GAME | MOVIE TECH" [YT 13:00]](https://www.youtube.com/watch?v=GcI-YlFSGYo)
+- [CBS Sunday Morning "The enigma of WWII codebreaker Alan Turing" [YT 7:30]](https://www.youtube.com/watch?v=nEomYB94TTI)
+- World War Two ["The Battle to Crack Enigma - The real story of 'The Imitation Game' - WW2 Special" [9:40]](https://www.youtube.com/watch?v=zALecS762ME)
+- PolisMultimedia ["IGF 2011: Jak łamie się szyfry - omówienie na przykładzie maszyny rotorowej Enigma" [YT 2:22]](https://www.youtube.com/watch?v=YU6GXeXji1c)
+- Code Bullet ["Building an Enigma Machine" [YT 12:07]](https://www.youtube.com/watch?v=2D2bJWHvqJo)
+- Dave Janelle ["Enigma II Encryption Machine & Puzzle - encode & decode cipher" [YT 9:22]](https://www.youtube.com/watch?v=hiOjqskDlS0) | ["Enigma Slide Rule Iinear Cipher Encryption machine" [YT 9:18]](https://www.youtube.com/watch?v=NbF_l7gss_A) | ["Enigma V Encryption machine with $150 solution challenge" [YT 6:17]](https://www.youtube.com/watch?v=E016UyT-eUU)
+- VilleKoo Virtanen ["How Enigma Works" [YT 0:20]](https://www.youtube.com/watch?v=uMPw0ObNJbQ)
+- Videos By Kevin ["Pringles Can Enigma Machine" [8:38]](https://www.youtube.com/watch?v=pZsuxZXN33g)
+- Bletchley Park ["The Enigma Machine - Bletchley Park takes a closer look at how it works" [YT 17:29]](https://www.youtube.com/watch?v=3Ux03qPgYVY)
+- G B ["How Alan Turing Cracked the Enigma Code Using Statistics" [YT 6:56]](https://www.youtube.com/watch?v=QIrC-8T_hqk)
+- PA3DMI ["Bletchley Park Tour [docu in full]" [YT 1:13:51]](https://www.youtube.com/watch?v=OuEHcJ7CCzg)
+- asciimation ["3D printed Enigma rotors." [YT 17:53]](https://www.youtube.com/watch?v=ncVOl6DNg88)
+- Gazeta Olsztyńska ["Oryginalna maszyna szyfrująca Enigma w Olsztynie." [YT 4:42]](https://www.youtube.com/watch?v=T6nGGQXmOEs)
+- Wirtualna Polska ["Sekrety maszyn szyfrujących [Enigma]" [YT 16:50]](https://www.youtube.com/watch?v=N9sLPtJDcbY)
+- ledermueller ["Enigma Machine Mechanism (feat. a 'Double Step')" [YT 0:39]](https://www.youtube.com/watch?v=hcVhQeZ5gI4)
+- Gideon Samid ["The ENIGMA of Modern Cryptography" [YT 8:05]](https://www.youtube.com/watch?v=ShOnhOGRXHk)
+- Sergio Morales ["Arduino 3D printed Enigma Machine" [YT 4:59]](https://www.youtube.com/watch?v=k2SRl5kKgS8)
+- opensources [Building an Enigma emulator and a Bombe](https://opensourc.es/blog/enigma-and-bombe/) | ["Enigma: Endless possibilities is not enough" [YT 9:09]](https://www.youtube.com/watch?v=4cf7dc_8u44) | ["How to crack the Enigma cipher?" [YT 11:22]](https://www.youtube.com/watch?v=bRT5YKez8m4)
+- Henry Hollingworth [Enigma machine videos [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PLBHQNO2azpeLzJUI4K_t8ynGfHIpXkwtF)
+- Shaun Durrani ["Paper Enigma Machine - CS430" [YT 14:59]](https://www.youtube.com/watch?v=cVdjxMjSQNo)
+- I Attenborough ["Building Enigma Machine using pringles tube" [YT 4:07]](https://www.youtube.com/watch?v=z1ehM1pHrIU)
+- Stanford ["Turing: Pioneer of the Information Age" [YT 1:36:38]](https://www.youtube.com/watch?v=p7Lv9GxigYU)
 
 ##### Artykuły
 
