--- a/src/content/pagearticles/react-links.mdx
+++ b/src/content/pagearticles/react-links.mdx
@@ -63,9 +63,9 @@ subsection: "js"
 - Tutorialspoint [ReactJS Tutorial](https://www.tutorialspoint.com/reactjs/)
 - opencodez: [ReactJS Tutorial](https://www.opencodez.com/reactjs/reactjs-an-introduction.htm) | [ReactJS Tutorial](https://www.opencodez.com/web-development/reactjs-an-introduction.htm)
 - [Scrimba - Playlist Learn React for free](https://scrimba.com/playlist/p7P5Hd)
-- [The React Handbook](https://reacthandbook.com) \- [flaviocopes/react-handbook](https://github.com/flaviocopes/react-handbook)
+- [The React Handbook](https://reacthandbook.com) | [flaviocopes/react-handbook](https://github.com/flaviocopes/react-handbook)
 - Chris Noring [React book](https://softchris.github.io/books/react/)
-- [Learn React for free](https://scrimba.com/g/glearnreact) \- ["Want to become a React developer? Here’s a massive 48-part tutorial created by a top technology school"](https://dev.to/perborgen/want-to-become-a-react-developer-here-s-a-massive-48-part-tutorial-created-by-a-top-technology-school-33pk)
+- [Learn React for free](https://scrimba.com/g/glearnreact) | ["Want to become a React developer? Here’s a massive 48-part tutorial created by a top technology school"](https://dev.to/perborgen/want-to-become-a-react-developer-here-s-a-massive-48-part-tutorial-created-by-a-top-technology-school-33pk)
 - [Learn React in 2020](https://react-2020.teachable.com/courses/learn-react-in-2020/lectures/13393690)
 - kirupa: [Learn React](https://www.kirupa.com/react/index.htm)
 - ["25 Best React JS Tutorial, Course, Training, and Certification 2018"](https://www.jadirectives.com/best-react-js-tutorial-course-training-certification/)
@@ -73,9 +73,9 @@ subsection: "js"
 - [Learn React.js in 30 Minutes (Crash Course 2019)](https://merunasgrincalaitis.com/learn-react/)
 - [Beginner React Tutorials Archives - Upmostly](https://upmostly.com/tag/beginner-react-tutorials)
 - ["Pocketbook: Learn to develop React 2019"](https://blog.theodo.fr/2019/04/react-developer-pocketbook/)
-- freecodecamp.org: ["Learn React.js in 5 minutes"](https://medium.freecodecamp.org/learn-react-js-in-5-minutes-526472d292f4) | ["How to Get Started with React — A Modern Project-based Guide for Beginners (Including Hooks)"](https://www.freecodecamp.org/news/getting-started-with-react-a-modern-project-based-guide-for-beginners-including-hooks-2/) | [Learn React - Full Course for Beginners](https://www.freecodecamp.org/news/learn-react-course/) \- ["Build an e-commerce site from scratch using React and Netlify"](https://www.freecodecamp.org/news/react-tutorial-ecomerce-site/) | ["An Introduction to React in 2019 (For People Who Know Just Enough jQuery To Get By)"](https://www.freecodecamp.org/news/react-introduction-for-people-who-know-just-enough-jquery-to-get-by-2019-version-28a4b4316d1a/) | [Reed Barger "The React Roadmap: 10 Steps to Become a React Developer in 2021"](https://www.freecodecamp.org/news/the-react-roadmap-10-steps-to-become-a-react-developer-in-2021/)
+- freecodecamp.org: ["Learn React.js in 5 minutes"](https://medium.freecodecamp.org/learn-react-js-in-5-minutes-526472d292f4) | ["How to Get Started with React — A Modern Project-based Guide for Beginners (Including Hooks)"](https://www.freecodecamp.org/news/getting-started-with-react-a-modern-project-based-guide-for-beginners-including-hooks-2/) | ["React JS Course for Beginners - 2021 Tutorial" [YT 7:10:27]](https://www.youtube.com/watch?v=nTeuhbP7wdE) | [Learn React - Full Course for Beginners](https://www.freecodecamp.org/news/learn-react-course/) | ["Build an e-commerce site from scratch using React and Netlify"](https://www.freecodecamp.org/news/react-tutorial-ecomerce-site/) | ["An Introduction to React in 2019 (For People Who Know Just Enough jQuery To Get By)"](https://www.freecodecamp.org/news/react-introduction-for-people-who-know-just-enough-jquery-to-get-by-2019-version-28a4b4316d1a/) | [Reed Barger "The React Roadmap: 10 Steps to Become a React Developer in 2021"](https://www.freecodecamp.org/news/the-react-roadmap-10-steps-to-become-a-react-developer-in-2021/)
 - ["A Complete Beginner's Guide to React"](https://dev.to/aspittel/a-complete-beginners-guide-to-react-2cl6)
-- ["React 101: Things every beginner should know -- Part 1"](https://contextneutral.com/story/react-101-things-every-beginner-should-know) (["React 101: Things every beginner should know — Part 1"](https://medium.com/@nileshsingh/react-101-things-every-beginner-should-know-part-1-f90a9c2f891e)
+- ["React 101: Things every beginner should know -- Part 1"](https://contextneutral.com/story/react-101-things-every-beginner-should-know) | (["React 101: Things every beginner should know — Part 1"](https://medium.com/@nileshsingh/react-101-things-every-beginner-should-know-part-1-f90a9c2f891e)
 - [Learn the basics of React in 5 days](https://daveceddia.com/pure-react-email-course/)
 - [Framer Guide To React](https://www.framer.com/books/framer-guide-to-react/)
 - [Learn React in 10 tweets (with hooks)](https://mobile.twitter.com/chrisachard/status/1175022111758442497)
@@ -98,14 +98,14 @@ subsection: "js"
 - [React Icons](https://react-icons.github.io)
 - [Chakra UI](https://chakra-ui.com) component library | [Jim Raptis "Build a Landing Page with Chakra UI - Part 1"](https://raptis.wtf/blog/build-a-landing-page-with-chakra-ui-part-1/)
 - [Storybook](https://storybook.js.org) open source tool for developing UI components | [Storybook for React](https://storybook.js.org/docs/guides/guide-react/) | [Shesh's blog "How we use Storybook for documentation and code reviews"](http://www.sheshbabu.com/posts/how-we-use-storybook-for-documentation-and-code-reviews/) | [Learn Storybook](https://www.learnstorybook.com) | [Codevolution "React Storybook Tutorial" [YT playlist 14 filmów]](https://www.youtube.com/playlist?list=PLC3y8-rFHvwhC-j3x3t9la8-GQJGViDQk)
-- [React Query](https://react-query.tanstack.com) \- Hooks for fetching, caching and updating asynchronous data in React
+- [React Query](https://react-query.tanstack.com) | Hooks for fetching, caching and updating asynchronous data in React
 - [silevis / reactgrid](https://github.com/silevis/reactgrid) Add spreadsheet-like behavior to your React app
-- [React Suite](https://rsuitejs.com/en/) \- ["React Suite 4.0 release"](https://dev.to/simonguo/react-suite-4-0-release-3441)
+- [React Suite](https://rsuitejs.com/en/) | ["React Suite 4.0 release"](https://dev.to/simonguo/react-suite-4-0-release-3441)
 - [axios](https://github.com/axios/axios) promise based HTTP client for the browser and node.js
 - [Formik](https://jaredpalmer.com/formik/) forms in React | ["How To Creating React Form Validation With Formik And Yup"](https://school.geekwall.in/p/Sy0_Jw4qN/how-to-creating-react-form-validation-with-formik-and-yup) | [Codevolution "React Formik Tutorial" [YT playlist 44 filmy]](https://www.youtube.com/playlist?list=PLC3y8-rFHvwiPmFbtzEWjESkqBVDbdgGu) | ["Intro to Formik" [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PLXzMwWvud3xT6fxOJ-JZqPYFiUaAx_bjI)
 - [Final Form](https://final-form.org) Framework agnostic, high performance, subscription-based form state management
 - [React Hook Form](https://react-hook-form.com/) Performant, flexible and extensible forms with easy-to-use validation. | [Courses with Frantz "The best way to build react forms with hooks in 2020" [7:27]](https://www.youtube.com/watch?v=gX1F-4c4tq0) | [William Kurniawan "Building a simple login form with Material UI and React Hook Form"](https://www.williamkurniawan.com/blog/building-a-simple-login-form-with-material-ui-and-react-hook-form)
-- [React Dashboard](https://react-dashboard.cube.dev) \- dynamic dashboard with React, GraphQL, and Cube.js
+- [React Dashboard](https://react-dashboard.cube.dev) | dynamic dashboard with React, GraphQL, and Cube.js
 - [tannerlinsley/react-table](https://github.com/tannerlinsley/react-table) Hooks for building fast and extendable tables and datagrids for React
 - [Semantic UI React](https://react.semantic-ui.com)
 - [Reach UI](https://reacttraining.com/reach-ui/) the accessible foundation of React-based design system
@@ -122,7 +122,7 @@ subsection: "js"
 #### Biblioteki - animacje
 
 - [react-spring](https://www.react-spring.io) components to life with simple spring animation primitives
-- [LottieFiles](https://lottiefiles.com) \- Free animation files built for Lottie
+- [LottieFiles](https://lottiefiles.com) - Free animation files built for Lottie
 - [Framer Motion](https://www.framer.com/motion/) an open source React library to power production-ready animations. Design fluid animations for the web, across desktop and mobile - [The Net Ninja "Framer Motion (for React) Tutorial" [YT playlist 18 filmów]](https://www.youtube.com/playlist?list=PL4cUxeGkcC9iHDnQfTHEVVceOEBsOf07i)
 - [Embla Carousel](https://davidcetinkaya.github.io/embla-carousel/) fluid carousel library with unmatched swipe precision
 - [React Slick](https://react-slick.neostack.com) React Carousel - port of jQuery slick library
@@ -147,17 +147,17 @@ subsection: "js"
 - [Stickyard](https://nihgwu.github.io/stickyard/) make your React component sticky
 - [react-grid-system](https://www.npmjs.com/package/react-grid-system)
 - [react-markdown](https://rexxars.github.io/react-markdown/)
-- [jask-oss/reaviz](https://github.com/jask-oss/reaviz) \- ReactJS Data Visualization Library based on D3.js
+- [jask-oss/reaviz](https://github.com/jask-oss/reaviz) - ReactJS Data Visualization Library based on D3.js
 - ["Advanced Map Shading"](https://wwwtyro.net/2019/03/21/advanced-map-shading.html)
 - [tr1s/tris-webpack-boilerplate](https://github.com/tr1s/tris-webpack-boilerplate) A Webpack boilerplate for static websites that has all the necessary modern tools and optimizations built-in.
 - ["The Best React Extension for VS Code"](https://scotch.io/tutorials/the-best-react-extension-for-vs-code)
 - ["React Visualization Libraries in 2019"](https://cube.dev/blog/react-visualization-libraries-in-2019/?7456)
 - [React Spaces](https://www.allaneagle.com/projects/react-spaces) nestable layout system
 - [Expo](https://expo.io)
-- [Material-UI](https://material-ui.com) \- React components for faster and easier web development
-- [ReSift](https://resift.org/docs/introduction/what-is-resift) \- React state management library for fetches
+- [Material-UI](https://material-ui.com) - React components for faster and easier web development
+- [ReSift](https://resift.org/docs/introduction/what-is-resift) - React state management library for fetches
 - ["ReactJS Framework : Important Tools for Developers"](https://www.expresstechsoftwares.com/reactjs-tools-for-developers/)
-- [Divjoy](https://divjoy.com) \- The React Codebase Generator
+- [Divjoy](https://divjoy.com) - The React Codebase Generator
 - [react-toolbox/react-toolbox](https://github.com/react-toolbox/react-toolbox) set of React components implementing Google's Material Design specification and CSS Modules
 - [Reach Router](https://reach.tech/router) a small, simple router for React that borrows from React Router, Ember, and Preact Router
 - [ReacType](https://reactype.io) prototyping tool for exporting React/Typescript applications | [Tyler Sullberg "Letters from the Dark World of React Boilerplate"](https://medium.com/@tylersullberg/letters-from-the-dark-world-of-react-boilerplate-5de9b4b8e2a3)
@@ -175,7 +175,7 @@ subsection: "js"
 
 - React.js [Articles](https://reactjs.org/community/articles.html)
 - ["JavaScript Basics Before You Learn React"](https://morioh.com/p/fb839c7da909)
-- [react.explore-tech.org An open source project to help developers learn, develop & explore](https://react.explore-tech.org) ([boyney123/react.explore-tech.org](boyney123/react.explore-tech.org)) \- ["Introducing react.explore-tech.org"](https://medium.com/@boyney123/introducing-react-explore-tech-org-7039d01acc5)
+- [react.explore-tech.org An open source project to help developers learn, develop & explore](https://react.explore-tech.org) ([boyney123/react.explore-tech.org](boyney123/react.explore-tech.org)) | ["Introducing react.explore-tech.org"](https://medium.com/@boyney123/introducing-react-explore-tech-org-7039d01acc5)
 - ["Introducing the new kid on the block, React hooks"](https://blog.linguinecode.com/post/getting-started-with-react-hooks)
 - CodeSpot ["Create React App From Scratch Part 1: Setting Up"](https://www.codespot.org/create-react-app-from-scratch-part-1/)
 - [Epic React by Bhanu Teja Pachipulusu](https://hashnode.com/series/epic-react-ckfv4gidh08efu9s1408v8tgp)
@@ -194,7 +194,7 @@ subsection: "js"
 - HOWTO [Nina Diana "Build a Note-Taking App with GraphQL and React — Part 1"](https://morioh.com/p/79185c6ec911) | ["Build a Note-Taking App with GraphQL and React — Part 2"](https://morioh.com/p/870469a4dd9b) | [Jake Whittaker "How to build a simple ToDo App with React"](https://morioh.com/p/197ecb3bd836/how-to-build-a-simple-todo-app-with-react) | [Jack Downson "How to Build Great React Search Experiences Quickly"](https://morioh.com/p/fa9fee86102a) | [Devil Moya "Building a Reddit Scraper with React and JavaScript: Composing Messages"](https://morioh.com/p/1b5cef0c9854/building-a-reddit-scraper-with-react-and-javascript-composing-messages) | ["Rich Text Editor Framework for React"](https://school.geekwall.in/p/GeCW9fTE/rich-text-editor-framework-for-react)
 - school.geekwall: ["Everything You Should Know About React"](https://school.geekwall.in/p/HyvHXS8RQ/everything-you-should-know-about-react) | ["Validating a Login Form With React"](https://school.geekwall.in/p/S1Pa4ZA6E/validating-a-login-form-with-react)
 - [Jude Obiejesi "The Concepts You Should Know in React"](https://icodemag.com/the-concepts-you-should-know-in-react/)
-- ["What I learned creating a 45 part tutorial series on how to build Youtube in React"](https://productioncoder.com/what-i-learned-creating-a-45-part-tutorial-series-on-how-to-build-youtube-in-react) ["Build Youtube in React 01: Project Kickoff"](https://productioncoder.com/build-youtube-in-react-part-1/) \- [productioncoder/youtube-react](https://github.com/productioncoder/youtube-react)
+- ["What I learned creating a 45 part tutorial series on how to build Youtube in React"](https://productioncoder.com/what-i-learned-creating-a-45-part-tutorial-series-on-how-to-build-youtube-in-react) ["Build Youtube in React 01: Project Kickoff"](https://productioncoder.com/build-youtube-in-react-part-1/) | [productioncoder/youtube-react](https://github.com/productioncoder/youtube-react)
 - ["How to build a React project from scratch using Webpack 4 and Babel"](https://hackernoon.com/how-to-build-a-react-project-from-scratch-using-webpack-4-and-babel-56d4a26afd32?gi=d4fd332ac8af) | [@pajamaGuy Arko "The Boring React State Management Guide"](https://hackernoon.com/the-boring-react-state-management-guide-ee173ufl)
 - ["ReactJS: Props vs. State"](https://lucybain.com/blog/2016/react-state-vs-pros/)
 - ["A (re)introduction to React"](https://hashnode.com/post/a-reintroduction-to-react-cjsbli2an02b7dys2y3ypng2z)
@@ -213,18 +213,18 @@ subsection: "js"
 - [Obed Parlapiano "A Visual Guide To React Mental Models"](https://obedparla.com/code/a-visual-guide-to-react-mental-models/)
 - LoginRadius Engineering [7 posts tagged with "React"](https://www.loginradius.com/engineering/blog/tags/react/)
 - [Ganeshmani P "Real-Time To-Do List Data Management in React using Redux-Saga and Socket"](https://www.codewall.co.uk/real-time-to-do-list-data-management-in-react-using-redux-saga-and-socket/)
-- Kemal Erdem ["React performance tricks"](https://erdem.pl/2019/08/react-performance-tricks) ["React - state management without libraries (with hooks)"](https://erdem.pl/2019/09/react-state-management-without-libraries-with-hooks) \- ["React - state management without libraries (with hooks) PART 2"](https://erdem.pl/2019/09/react-state-management-without-libraries-with-hooks-part-2)
+- Kemal Erdem ["React performance tricks"](https://erdem.pl/2019/08/react-performance-tricks) ["React - state management without libraries (with hooks)"](https://erdem.pl/2019/09/react-state-management-without-libraries-with-hooks) | ["React - state management without libraries (with hooks) PART 2"](https://erdem.pl/2019/09/react-state-management-without-libraries-with-hooks-part-2)
 - Ash: ["Component-level static props in Next.js"](https://ash.gd/posts/2020-06-20-component-level-static-props-in-next-js)
 - ["How To Create Weather App Using React.js With Current Location & Search City"](https://www.htmlhints.com/article/how-to-create-weather-using-reactjs-with-current-location-search-city/93)
 - [React for Designers](https://designcode.io/react-for-designers)
-- [GoodWorkLabs: Javascript frameworks](https://www.goodworklabs.com/c/javascript-frameworks/) \- [Best Tutorials for React JS and React Native](https://www.goodworklabs.com/best-react-native-tutorials/)
+- [GoodWorkLabs: Javascript frameworks](https://www.goodworklabs.com/c/javascript-frameworks/) | [Best Tutorials for React JS and React Native](https://www.goodworklabs.com/best-react-native-tutorials/)
 - [Shards React](https://designrevision.com/downloads/shards-react/) Free & Modern React UI Kit [DesignRevision/shards-react](https://github.com/DesignRevision/shards-react)
 - Stack Chief: [React](https://www.stackchief.com/search/react)
 - Through the binary: [Tag: react](http://www.albertgao.xyz/tags/react/)
 - OvpV: [Category Archives: React.](https://ovpv.me/category/web-development/js/react/)
 - [React archives](https://blog.soshace.com/en/category/javascript/react/)
 - [Sites Using React](https://github.com/facebook/react/wiki/Sites-Using-React)
-- [Light Portal View Tutorial](https://doc.networknt.com/tutorial/portal/view/) \- [Light-4j API Portal](https://lightapi.net)
+- [Light Portal View Tutorial](https://doc.networknt.com/tutorial/portal/view/) | [Light-4j API Portal](https://lightapi.net)
 - [howchoo | react](https://howchoo.com/h/react)
 - [React Archives | Soshace](https://blog.soshace.com/en/category/javascript/react/)
 - DivDev.io: [5 posts in "react" category](https://divdev.io/tags/react/)
@@ -252,7 +252,7 @@ subsection: "js"
 - **Playlisty:** [Artur Chmaro "Podstawy ReactJS" [YT playlista 40 filmów]](https://www.youtube.com/playlist?list=PLOzzvlJKwOdUrSZq-GgVkl9vdOnW8XJlq) | [Skillthrive "React Tutorials" [YT playlist 7 filmów]](https://www.youtube.com/playlist?list=PLW0RabRDhwwy4oCLx4n2adw2Jt2hRmYS2) | [Samuraj Programowania "Aplikacja pogodowa w React" [YT playlist 8 filmów]](https://www.youtube.com/playlist?list=PLTs20Q-BTEMNlWqt1sofJj5HDDqNlZy3L) | [techsith "react js from scratch" [YT playlist 40 filmów]](https://www.youtube.com/playlist?list=PL7pEw9n3GkoVAqCMVTz2mKthyWr-svpQJ) | [CodeBucks "React Advanced Concepts | Every React Developer Should Know" [YT playlist 6 filmów]](https://www.youtube.com/playlist?list=PLjxZxD6BDkeZoRU6v7gMyQ7BirGD6u0Lt) | [Rostislav Futornoy "Building a Workout Diary App with React" [YT playlist 5 filmów]](https://www.youtube.com/playlist?list=PLfSrzzhzss5JG8SQzE2G2sS7iNAykxrGW) | [Imran Sayed - Codeytek Academy "React Tutorial | Beginner to Advanced | Reactjs Tutorial for Beginners" [YT playlist 22 filmy]](https://www.youtube.com/playlist?list=PLD8nQCAhR3tQ7KXnvIk_v_SLK-Fb2y_k_) | [Frontend Love "React Live 2019" [YT playlist 14 filmów]](https://www.youtube.com/playlist?list=PL02pdjMT4gWxG9wMNFMoZgOKRtXIqz2zT) | [Brian Design "React JS Tutorials" [YT playlist 15 filmów]](https://www.youtube.com/playlist?list=PLs1fqgQpnCmJSkrDA2wTsSsLnYpE8jpVy) | [Eduonix Learning Solutions "Build Weather Application with React" [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PLDmvslp_VR0z5ffV7AhqN8Cn3TLnWC0Im) | [Stuy "React.js Tutorials" [YT playlist 2 filmy]](https://www.youtube.com/playlist?list=PL_cUvD4qzbkwnUdVQDNkVN34y1DL4LdAr) | [Hamza Mirza "React Projects" [YT playlista 6 filmów]](https://www.youtube.com/playlist?list=PL-A25UnNS7sxUEIq4RzuYI9VgDfQZF566) | [DmitriiKee Coding "React JS crash course" [YT playlista 12 filmów]](https://www.youtube.com/playlist?list=PLrpPyXsOjHyFe7QxvBkABEhX3i0Own86l) | [Shanjai Raj "React Tutorials" [YT playlist 8 filmów]](https://www.youtube.com/playlist?list=PLcG_K4-GCpkD1XJBgE2zRuX_k35vGkKH5) | [Manan Gouhari "Try React.js" [YT playlista 10 filmów]](https://www.youtube.com/playlist?list=PL1xmoAWnCP4-jEE1qK5OGS05UoZVup8Ix) | [The Nerdy Dev "React.js Tutorials For Beginners" [YT playlista 7 filmów]](https://www.youtube.com/playlist?list=PLXgqhtspYCM_riIA3Mqbq6wQcdLMF5kAp) | [Karl Hadwen "Learn React in 2020" [YT playlist 14 filmów]](https://www.youtube.com/playlist?list=PLpP9FLMkNf55SMsrUPxJst2hH7R1lAq2I) | [Adrian Twarog "React Navigation 5" [YT playlista 2 filmy]](https://www.youtube.com/playlist?list=PLsprmdocuVe_4KKrafW2oKaJbEZKTq-8-) | [Alan Montgomery - Coding Tutorials "React" [YT playlist 1 film]](https://www.youtube.com/playlist?list=PLaeoIQ5GBVopxGJWACiOlzsSb6mgUBdeP) | [GreyCampus Academy "Free React JS Course | React JS Tutorial for Beginners | What is React JS | React JS for UI Development" [YT playlista 5 filmów]](https://www.youtube.com/playlist?list=PLFau9iMLu2eYm_9BWGaHm0oVRr6uN-l3d) | [Coding Addict "React Projects" [YT playlist 6 filmów]](https://www.youtube.com/playlist?list=PLnHJACx3NwAe5XQDk9xLgym7FF8Q4FYW7) | [Gerrit Alex - React [YT playlist 5 filmów]](https://www.youtube.com/playlist?list=PL9pGaaLCaEUV0lF17lKevdn2P-i-JfcO_) | [Mahmoud Shehata - Learn React in 2020 [YT playlist 10 filmów]](https://www.youtube.com/playlist?list=PLDIXF8nb0VG1v4S-smVy7GV0MHsJ3PJiL) | [Thomas Sojka Morphing Visualizations in React & D3.js [YT playlist 12]](https://www.youtube.com/playlist?list=PLB3sLatZtqYms9T85gf_PTyneg1SLvsEa) | [80/20 Coding "React Router Crash Course" [YT playlist 5 filmów]](https://www.youtube.com/playlist?list=PL6jnTQwFvrdaIg9qnNL31I6JA6vkkAV7i) | [codeSTACKr - React Tutorials [YT playlist 15 filmów]](https://www.youtube.com/playlist?list=PLkwxH9e_vrAK4TdffpxKY3QGyHCpxFcQ0) | [Will Ward "Webpack 4 with React Tutorial" [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PLASldBPN_pkDdnbpUEoFblLOhAEDlGH7N) | [Better Coding Academy "React Tutorials" [YT playlist 13 filmów]](https://www.youtube.com/playlist?list=PLnTRniWXnjf_rY2wC-x0yqCUG-yYgqonX) | [Bitfumes "ReactJS Basics" [YT playlist 36 filmów]](https://www.youtube.com/playlist?list=PLe30vg_FG4OSw8SIcLVci-jB_-W1ZkLYp) | [h3webdevtuts "React Tutorials" [YT playlist 21 filmów]](https://www.youtube.com/playlist?list=PLznDpR0Sx-TzTCNq_MwL8TQ_ZOmpuGrls) | [React for beginners "React for beginners" [YT playlist 4 filmy]](https://www.youtube.com/playlist?list=PL5XNamQf2GSp3YyT_g4SLGLKUocwWUsB6) | [The Full Stack Junkie "React Conecpts" [YT playlist 2 filmy]](https://www.youtube.com/playlist?list=PLuGe-XRWqbNTD3u4LeC3rEioaDVX04Emj) | [Daily Tuition "React For Beginners - New Course" [YT playlist 27 filmów]](https://www.youtube.com/playlist?list=PLynWqC6VC9KOYfQCImyKXCiMux_a_SjMw) | [Anthony Sistilli "Learn React For Beginners 2020 / 2021" [YT playlist 12 filmów]](https://www.youtube.com/playlist?list=PLQg6GaokU5CyvExiaMgXP_BS5WWNBfZJN) | [Fullstack Development "React JS Tutorials" [YT playlist 16 filmów]](https://www.youtube.com/playlist?list=PLl6eqve20a7f5xiLzRk6EW7wGZS6p5XHN) | [Lee Robinson "React 2025" [YT playlist 16 filmów]](https://www.youtube.com/playlist?list=PL6bwFJ82M6FXgctyoWXqj7H0GK8_YIeF1)
 - What I Learned Today [What I Learned Today – Atomic Jolt "React Basics" [YT playlist 5 filmów]](https://www.youtube.com/playlist?list=PLUAEXpf1UDMn_ZatRLZvLkWUBfhT28nfz) | [What I Learned Today – Atomic Jolt "React" [YT playlist 39 filmów]](https://www.youtube.com/playlist?list=PLUAEXpf1UDMkzPOiNJBrlqsUryn7n2cnK)
 - Clever Programmer [Clever Programmer "React JS Tutorial for Beginners - Full Course in 12 Hours [2021]" [YT 11:32:50]](https://www.youtube.com/watch?v=-cMqr9HpZ-Y) | [Clever Programmer "Learn the MERN Stack - Full Tutorial for Beginners (MongoDB, Express, React, NodeJS) in 12Hrs (2021)" [YT 12:01:49]](https://www.youtube.com/watch?v=ktjafK4SgWM) | [Clever Programmer "Let's Build a Full-Stack AMAZON Clone with REACT JS for Beginners (Full E-Comm Store in 8 Hrs) 2021" [YT 8:43:33]](https://www.youtube.com/watch?v=RDV3Z1KCBvo)
-- Leigh Halliday [Leigh Halliday "Beginner React" [YT playlist 10 filmów]](https://www.youtube.com/playlist?list=PL8fumNHsC-3N66NS2Dhx2BODThDv4Ml0j) \- [Leigh Halliday "Advanced React" [YT playlist 15 filmów]](https://www.youtube.com/playlist?list=PL8fumNHsC-3P7SYHKwDu55n_9_1v1owzI)
+- Leigh Halliday [Leigh Halliday "Beginner React" [YT playlist 10 filmów]](https://www.youtube.com/playlist?list=PL8fumNHsC-3N66NS2Dhx2BODThDv4Ml0j) | [Leigh Halliday "Advanced React" [YT playlist 15 filmów]](https://www.youtube.com/playlist?list=PL8fumNHsC-3P7SYHKwDu55n_9_1v1owzI)
 - adamthedev [adamthedev - Let's recreate the Spotify UI in React.js Playlist [YT playlist 7 filmów]](https://www.youtube.com/playlist?list=PLTXFz3WKxvNJq8OFqDnmTmrBO9S2DfS7O) | [adamthedev - React.js Talks (from list @ https://github.com/tiaanduplessis/awesome-react-talks) [8 filmów]](https://www.youtube.com/playlist?list=PLTXFz3WKxvNJ2PITJSU2F5u0XAiEzwPaU)
 - Barely Coding [Barely Coding "Build a game in React" [YT playlista 3 filmy]](https://www.youtube.com/playlist?list=PLGMdx7aeJHvQe16pAetbmkIGsj-HUsIYj) | [Barely Coding "React Recoil Adventures" [YT playlista 4 filmy]](https://www.youtube.com/playlist?list=PLGMdx7aeJHvS6YolTnmcgSAHKON8eiH1h)
 - Web Dev Simplified [Web Dev Simplified "React" [YT playlist 15 filmów]](https://www.youtube.com/playlist?list=PLZlA0Gpn_vH_NT5zPVp18nGe_W9LqBDQK) | [Web Dev Simplified "React Hooks" [YT playlist 4 filmy]](https://www.youtube.com/playlist?list=PLZlA0Gpn_vH8EtggFGERCwMY5u5hOjf-h)
@@ -268,9 +268,9 @@ subsection: "js"
 - Bruno Antunes [Bruno Antunes "React Material-UI Themes: Customize Material Components for your Project" [YT 22:50]](https://www.youtube.com/watch?v=bDkB3LoQKxs) | [Snir David - dev "React Router 6 Tutorial | 2020" [YT 25:05]](https://www.youtube.com/watch?v=Z89iY7xwBSU) | [CS Journey "React Shopping Cart - First using Vanilla JavaScript and then using React [Project] [2020]" [YT 2:34:21]](https://www.youtube.com/watch?v=LDKnz5gwdz4) | [Bubble Fish Design "React Tutorial For Beginners" [YT 34:12]](https://www.youtube.com/watch?v=o5QhP6w0X48)
 - [Attend the biggest ReactJS conference in the cloud](https://sfree.life/reactjs-react-summit-conf-2020-stream-free/) | ["React Explained in Five Visual Metaphors"](https://www.youtube.com/watch?v=K8MF3aDg-bM&feature=youtu.be&t=13845)
 - Programming with Mosh [Programming with Mosh "React Tutorial for Beginners [React js]" [2:25:26]](https://www.youtube.com/watch?v=Ke90Tje7VS0) | [Programming with Mosh: React Tutorials [YT playlist 3 filmy]](https://www.youtube.com/playlist?list=PLTjRvDozrdlzBR7lYU4DtQRDQ6xCNSBIS) | [Programming with Mosh "JavaScript for React Developers | Mosh" [YT 50:04]](https://www.youtube.com/watch?v=NCwa_xi0Uuc)
-- **freeCodeCamp.org:** ["Learn React JS - Full Course for Beginners - Tutorial 2019" [YT 5:05:33]](https://www.youtube.com/watch?v=DLX62G4lc44) | ["Full React Course 2020 - Learn Fundamentals, Hooks, Context API, React Router, Custom Hooks" [10:07:52]](https://www.youtube.com/watch?v=4UZrsTqkcW4) | ["Code 15 React Projects - Complete Course" [9:07:47]](https://www.youtube.com/watch?v=a_7Z7C_JCyo) | [React / GraphQL Course - Build a social media app (MERNG Stack)" [YT 5:44:27]](https://www.youtube.com/watch?v=n1mdAPFq2Os) | ["In-Depth React Tutorial: Build a Hotel Reservation Site (with Contentful and Netlify)" [YT 5:51:26]](https://www.youtube.com/watch?v=LXJOvkVYQqA) | ["How to Build Tetris in React - GameDev Tutorial (with React Hooks!)" [2:34:17]](https://www.youtube.com/watch?v=ZGOaCxX8HIU) | ["Intermediate React Tutorial - Todoist Clone (with Firebase, Custom Hooks, SCSS, React Testing)" [YT 7:38:38]](https://www.youtube.com/watch?v=hT3j87FMR6M) | ["React Tutorial: Build an e-commerce site from scratch using React and Netlify" [YT 6:18:14]](https://www.youtube.com/watch?v=wPQ1-33teR4) | ["React Tutorials" [YT playlist 28 filmów]](https://www.youtube.com/playlist?list=PLWKjhJtqVAbkArDMazoARtNz1aMwNWmvC) | ["React Live Coding (Project 4) - Live Coding with Jesse" [YT playlist 16 filmów]](https://www.youtube.com/playlist?list=PLWKjhJtqVAbmcla_n9Haxp8PfTGYXIBwP) \- ["React Project 5 - Live Coding with Jesse" [YT playlist 103 filmy]](https://www.youtube.com/playlist?list=PLWKjhJtqVAbkOoQw0jDWn-pzN3nFVjhbH) | ["Build a Shopping Cart with React and TypeScript - Tutorial" [YT 1:06:44]](https://www.youtube.com/watch?v=sfmL6bGbiN8) | ["MERN Stack Course - ALSO: Convert Backend to Serverless with MongoDB Realm" [2:43:19]](https://www.youtube.com/watch?v=mrHNSanmqQ4)
+- **freeCodeCamp.org:** ["Learn React JS - Full Course for Beginners - Tutorial 2019" [YT 5:05:33]](https://www.youtube.com/watch?v=DLX62G4lc44) | ["Full React Course 2020 - Learn Fundamentals, Hooks, Context API, React Router, Custom Hooks" [10:07:52]](https://www.youtube.com/watch?v=4UZrsTqkcW4) | ["Code 15 React Projects - Complete Course" [9:07:47]](https://www.youtube.com/watch?v=a_7Z7C_JCyo) | [React / GraphQL Course - Build a social media app (MERNG Stack)" [YT 5:44:27]](https://www.youtube.com/watch?v=n1mdAPFq2Os) | ["In-Depth React Tutorial: Build a Hotel Reservation Site (with Contentful and Netlify)" [YT 5:51:26]](https://www.youtube.com/watch?v=LXJOvkVYQqA) | ["How to Build Tetris in React - GameDev Tutorial (with React Hooks!)" [2:34:17]](https://www.youtube.com/watch?v=ZGOaCxX8HIU) | ["Intermediate React Tutorial - Todoist Clone (with Firebase, Custom Hooks, SCSS, React Testing)" [YT 7:38:38]](https://www.youtube.com/watch?v=hT3j87FMR6M) | ["React Tutorial: Build an e-commerce site from scratch using React and Netlify" [YT 6:18:14]](https://www.youtube.com/watch?v=wPQ1-33teR4) | ["React Tutorials" [YT playlist 28 filmów]](https://www.youtube.com/playlist?list=PLWKjhJtqVAbkArDMazoARtNz1aMwNWmvC) | ["React Live Coding (Project 4) - Live Coding with Jesse" [YT playlist 16 filmów]](https://www.youtube.com/playlist?list=PLWKjhJtqVAbmcla_n9Haxp8PfTGYXIBwP) | ["React Project 5 - Live Coding with Jesse" [YT playlist 103 filmy]](https://www.youtube.com/playlist?list=PLWKjhJtqVAbkOoQw0jDWn-pzN3nFVjhbH) | ["Build a Shopping Cart with React and TypeScript - Tutorial" [YT 1:06:44]](https://www.youtube.com/watch?v=sfmL6bGbiN8) | ["MERN Stack Course - ALSO: Convert Backend to Serverless with MongoDB Realm" [2:43:19]](https://www.youtube.com/watch?v=mrHNSanmqQ4)
 - The Net Ninja ["Full Modern React Tutorial" [YT playlist 32 filmy]](https://www.youtube.com/playlist?list=PL4cUxeGkcC9gZD-Tvwfod2gaISzfRiP9d) | ["React, Redux & Firebase App Tutorial" [YT playlist 40 filmów]](https://www.youtube.com/playlist?list=PL4cUxeGkcC9iWstfXntcj8f-dFZ4UtlN3) ["React Tutorials" [YT playlist 16 filmów]](https://www.youtube.com/playlist?list=PL4cUxeGkcC9i0_2FF-WhtRIfIJ1lXlTZR) | ["Complete React Tutorial (with Redux)" [YT playlist 44 filmy]](https://www.youtube.com/playlist?list=PL4cUxeGkcC9ij8CfkAY2RAGb-tmkNwQHG)
-- **Filmy:** [Twórca Stron "React JS - kurs w 60 minut" [1:05:59]](https://www.youtube.com/watch?v=Qz7swLxNS0Y) | [Coding with Basir "React & Node Tutorial - Full ECommerce in 9 Hours [2021]" [9"06:27]](https://www.youtube.com/watch?v=TRCDsB9i3bI) | [Dev Ed "React Tutorial For Beginners" [YT 43:18]](https://www.youtube.com/watch?v=dGcsHMXbSOA) | [Quentin Watt Tutorials "React Crash Course 2020" [2:02:48]](https://www.youtube.com/watch?v=mACw_G-okPE) | [DevBrock "ReactJS Crash Course 2020 | React Functional Components, Hooks, and React Router" [YT 26:56]](www.youtube.com/watch?v=KQOtXYC0We8) | [Bitfumes "React JS Tutorial - Full Course 10 Hours (2020)" [YT 10:11:01]](https://www.youtube.com/watch?v=I6tbhNUU96Y) | [CS Journey "JavaScript / React Shopping Cart - Using Vanilla JavaScript and then using React [Project] [2020]" [YT 2:34:21]](https://youtu.be/LDKnz5gwdz4) | [TalkInCode "Learn the basics of React and using NPM" [1:01:59]](https://www.youtube.com/watch?v=F93Pzj6xk1E) | [TechCode "Introduction to React" [YT 1:00:15]](https://www.youtube.com/watch?v=pHf_mCDfGW0) | [Code Geek "Learn React.js - Full Course for Beginners" [4:38:40]](https://www.youtube.com/watch?v=QFJDYwu15jE) | ["Build Youtube in React - finished project demo [YT 6:35]](https://www.youtube.com/watch?v=E7wJTI-1dvQ) | ["Designing with React" [YT 29:42]](https://www.youtube.com/watch?v=Rs3DZF1B2VM) | ["The React Cookbook Advanced Recipes to Level Up Your Next App" [YT 41:46]](https://www.youtube.com/watch?v=NOm_qBxZVoc) | [Code GK "The React Cookbook Advanced Recipes to Level Up Your Next App" [YT 41:46]](https://www.youtube.com/watch?v=NOm_qBxZVoc) | ["Timeline Component in React (and some CSS Magic 🎩) \- Day 06" [YT 29:36]](https://www.youtube.com/watch?v=tcUVUBlyXX8) | [Esteban Codes "React Tutorial: Build a chess ♖ game with react ,rxjs and react drag and drop" [YT 2:04:11]](https://www.youtube.com/watch?v=kBR7pDLcC3A) | Lama Dev ["React Admin Dashboard Tutorial | React Admin Panel Design Course for Beginners" [YT 2:50:55]](https://www.youtube.com/watch?v=aTPkos3LKi8)
+- **Filmy:** [Twórca Stron "React JS - kurs w 60 minut" [1:05:59]](https://www.youtube.com/watch?v=Qz7swLxNS0Y) | [Coding with Basir "React & Node Tutorial - Full ECommerce in 9 Hours [2021]" [9"06:27]](https://www.youtube.com/watch?v=TRCDsB9i3bI) | [Dev Ed "React Tutorial For Beginners" [YT 43:18]](https://www.youtube.com/watch?v=dGcsHMXbSOA) | [Quentin Watt Tutorials "React Crash Course 2020" [2:02:48]](https://www.youtube.com/watch?v=mACw_G-okPE) | [DevBrock "ReactJS Crash Course 2020 | React Functional Components, Hooks, and React Router" [YT 26:56]](www.youtube.com/watch?v=KQOtXYC0We8) | [Bitfumes "React JS Tutorial - Full Course 10 Hours (2020)" [YT 10:11:01]](https://www.youtube.com/watch?v=I6tbhNUU96Y) | [CS Journey "JavaScript / React Shopping Cart - Using Vanilla JavaScript and then using React [Project] [2020]" [YT 2:34:21]](https://youtu.be/LDKnz5gwdz4) | [TalkInCode "Learn the basics of React and using NPM" [1:01:59]](https://www.youtube.com/watch?v=F93Pzj6xk1E) | [TechCode "Introduction to React" [YT 1:00:15]](https://www.youtube.com/watch?v=pHf_mCDfGW0) | [Code Geek "Learn React.js - Full Course for Beginners" [4:38:40]](https://www.youtube.com/watch?v=QFJDYwu15jE) | ["Build Youtube in React - finished project demo [YT 6:35]](https://www.youtube.com/watch?v=E7wJTI-1dvQ) | ["Designing with React" [YT 29:42]](https://www.youtube.com/watch?v=Rs3DZF1B2VM) | ["The React Cookbook Advanced Recipes to Level Up Your Next App" [YT 41:46]](https://www.youtube.com/watch?v=NOm_qBxZVoc) | [Code GK "The React Cookbook Advanced Recipes to Level Up Your Next App" [YT 41:46]](https://www.youtube.com/watch?v=NOm_qBxZVoc) | ["Timeline Component in React (and some CSS Magic 🎩) | Day 06" [YT 29:36]](https://www.youtube.com/watch?v=tcUVUBlyXX8) | [Esteban Codes "React Tutorial: Build a chess ♖ game with react ,rxjs and react drag and drop" [YT 2:04:11]](https://www.youtube.com/watch?v=kBR7pDLcC3A) | Lama Dev ["React Admin Dashboard Tutorial | React Admin Panel Design Course for Beginners" [YT 2:50:55]](https://www.youtube.com/watch?v=aTPkos3LKi8)
 
 #### Typescript
 
@@ -309,7 +309,7 @@ subsection: "js"
 #### Draft.js
 
 - ["Top 15: Best Rich Text Editor Components (WYSIWYG) for ReactJS"](https://ourcodeworld.com/articles/read/1065/top-15-best-rich-text-editor-components-wysiwyg-for-reactjs)
-- [Draft.js](https://draftjs.org) \- [React Draft Wysiwyg](https://jpuri.github.io/react-draft-wysiwyg/#/)
+- [Draft.js](https://draftjs.org) | [React Draft Wysiwyg](https://jpuri.github.io/react-draft-wysiwyg/#/)
 - [React.js and Draft.js expert for hire | React Rocket](https://reactrocket.com)
 - CodePulse [Category: draft.js](https://codepulse.blog/category/draft-js/)
 - [Siobhan Mahoney "Building a Rich Text Editor with React and Draft.js, Pt. 1: Basic Set Up"](https://medium.com/@siobhanpmahoney/building-a-rich-text-editor-with-draft-js-react-redux-and-rails-ef8d2e2897bf)
@@ -363,7 +363,7 @@ subsection: "js"
 
 #### Redux strony
 
-- [Redux](https://redux.js.org) | [Redux Tutorials Index](https://redux.js.org/tutorials/index) \- [reduxjs/redux-starter-kit](https://github.com/reduxjs/redux-starter-kit)
+- [Redux](https://redux.js.org) | [Redux Tutorials Index](https://redux.js.org/tutorials/index) | [reduxjs/redux-starter-kit](https://github.com/reduxjs/redux-starter-kit)
 - [Redux Toolkit](https://redux-toolkit.js.org)
 - [Redux Form](https://redux-form.com/)
 - [A Complete React Redux Tutorial for 2019](https://daveceddia.com/redux-tutorial/)
@@ -419,7 +419,7 @@ subsection: "js"
 - [HomeReact / native](https://kriss.io/category/react-native/)
 - [React Native Archives - CodeSource.io](https://codesource.io/category/react-native/)
 - [vickOnRails / react-native-casestudies](https://github.com/vickOnRails/react-native-casestudies/) (WIP) A collection of React Native case studies to help you make up your mind
-- [React Native School](https://www.reactnativeschool.com) \- [React Native School [YT (14)]](https://www.youtube.com/c/ReactNativeSchool/)
+- [React Native School](https://www.reactnativeschool.com) | [React Native School [YT (14)]](https://www.youtube.com/c/ReactNativeSchool/)
 - [vickOnRails / react-native-30](https://github.com/vickOnRails/react-native-30/) A daily documentation of my journey into react-native
 - DevNews [Tag: React Native](https://www.devnews.pl/tag/react-native/)
 
@@ -463,7 +463,7 @@ subsection: "js"
 - codedamn [codedamn "React Native Tutorials" [YT playlist 34 filmów]](https://www.youtube.com/playlist?list=PLYxzS__5yYQlHANFLwcsSzt3elIbYTG1h) | [codedamn "React Native - General" [YT playlist 6 filmów]](https://www.youtube.com/playlist?list=PLYxzS__5yYQlGltx7Vx-VgFpfWS5HEMHO) | [codedamn "React Native Animation Tutorials" [YT playlist 18 filmów]](https://www.youtube.com/playlist?list=PLYxzS__5yYQmdfEyKDrlG5E0F0u7_iIUo)
 - **Filmy:** [Esteban Codes "React Native Crash Course - Full App tutorial with Expo (2020)" [YT 2:00:11]](https://www.youtube.com/watch?v=NgDaPmxewcg) | [acodez "Performance in React Native" [30:10]](https://www.youtube.com/watch?v=4bquxpv7GG8)
 - Academind [Academind "React Native Tutorial for Beginners - Crash Course 2020" [5:45:43]](https://www.youtube.com/watch?v=qSRrxpdMpVc) | [Academind "Which one is best for you? Flutter, React Native, Ionic or NativeScript?" [38:17]](https://www.youtube.com/watch?v=PKRXbLnfXXk)
-- **freeCodeCamp.org** ["Android Development for Beginners - Full Course" [YT 11:36:26]](https://www.youtube.com/watch?v=fis26HvvDII) \- ["Android Development for Beginners - Full Course (Part 2)" [YT 3:10:56]](https://www.youtube.com/watch?v=RcSHAkpwXAQ) | ["React Native Web (Project 7) - Live Coding with Jesse" [YT playlist 13 filmów]](https://www.youtube.com/playlist?list=PLWKjhJtqVAblh4QvUtzEq4qgs_bnvBrw2) | ["Build an Instagram Clone with React Native, Firebase Firestore, Redux, Expo - Full Course" [YT 5:50:14]](https://www.youtube.com/watch?v=1hPgQWbWmEk)
+- **freeCodeCamp.org** ["Android Development for Beginners - Full Course" [YT 11:36:26]](https://www.youtube.com/watch?v=fis26HvvDII) | ["Android Development for Beginners - Full Course (Part 2)" [YT 3:10:56]](https://www.youtube.com/watch?v=RcSHAkpwXAQ) | ["React Native Web (Project 7) - Live Coding with Jesse" [YT playlist 13 filmów]](https://www.youtube.com/playlist?list=PLWKjhJtqVAblh4QvUtzEq4qgs_bnvBrw2) | ["Build an Instagram Clone with React Native, Firebase Firestore, Redux, Expo - Full Course" [YT 5:50:14]](https://www.youtube.com/watch?v=1hPgQWbWmEk)
 
 ### Solid.js
 
