--- a/src/content/fbarticles/blog.mdx
+++ b/src/content/fbarticles/blog.mdx
@@ -99,3 +99,4 @@ Czego natomiast zabraknie to niestety mapy i dokładny opis wojny na Śląsku, t
 - Grupa Rekonstrukcji Historycznej Festung Breslau [Historia walk o Festung Breslau oddziałów RKKA](http://www.festungbreslau.wroclaw.pl/main.php?target=bitwa-rkka)
 - [Miasto Kołobrzeg [YT (1)]](https://www.youtube.com/user/magistratkolobrzeg/videos)
 - Geschichtliches Erbe ["Mundarten Ostpreußens [Ostpreußische Grundlagen]" [YT 22:23]](https://www.youtube.com/watch?v=bIvo4HA3gwg)
+- WarsofTheWorld ["Heinrich Himmler: Architect of The Final Solution | WW2 Documentary" [YT 1:03:39]](https://www.youtube.com/watch?v=dmV1ehLK9sI)
