--- a/src/content/fbarticles/japonia-usa.mdx
+++ b/src/content/fbarticles/japonia-usa.mdx
@@ -78,7 +78,7 @@ Ogółem w wojnie z USA i UK japońska armia straciła 1,14 mln ludzi, w tym 200
 
 ### Odnośniki
 
-- Mark Felton Productions ["Rocket Kamikazes!" [10:58]](https://www.youtube.com/watch?v=TzVpXbz6spU) Ohka | ["Kamikaze Commandos! Japanese Airborne Raid Okinawa 1945" [14:26]](https://www.youtube.com/watch?v=zR8usETx6Qg) | ["Secret Japanese Submarine Mission to German-Occupied France" [YT 14:05]](https://www.youtube.com/watch?v=6_4yaH6Y_hQ) | ["Occupying Japan 1945 - The First Uncertain Days of Peace" [YT 10:09]](https://www.youtube.com/watch?v=-x1d-K2l6oU) | ["Japanese 'Invasion' of America (Part 1 - LA)" [YT 22:00]](https://www.youtube.com/watch?v=FGDcsZpx0WY) | ["Japanese 'Invasion' of America (Part 2 - Canada & Oregon)" [YT 15:42]](https://www.youtube.com/watch?v=4z3ntYm5ta4) | ["Secret Axis Flights - Europe to Tokyo" [YT 10:21]](https://www.youtube.com/watch?v=r7PzpHNa8iM) | ["Shocking Japanese World War II Museum" [YT 5:04]](https://www.youtube.com/watch?v=ngzesh6eN14) | ["WW2 Rocket Ships - Beach Landing Battering Rams" [YT 8:41]](https://www.youtube.com/watch?v=5gGrkZ00Iwc) | ["Japan vs. Italy - The Forgotten Pacific War" [YT 14:09]](https://www.youtube.com/watch?v=VlSi2Zr-h_Y)
+- Mark Felton Productions ["Rocket Kamikazes!" [10:58]](https://www.youtube.com/watch?v=TzVpXbz6spU) Ohka | ["Kamikaze Commandos! Japanese Airborne Raid Okinawa 1945" [14:26]](https://www.youtube.com/watch?v=zR8usETx6Qg) | ["Secret Japanese Submarine Mission to German-Occupied France" [YT 14:05]](https://www.youtube.com/watch?v=6_4yaH6Y_hQ) | ["Occupying Japan 1945 - The First Uncertain Days of Peace" [YT 10:09]](https://www.youtube.com/watch?v=-x1d-K2l6oU) | ["Japanese 'Invasion' of America (Part 1 - LA)" [YT 22:00]](https://www.youtube.com/watch?v=FGDcsZpx0WY) | ["Japanese 'Invasion' of America (Part 2 - Canada & Oregon)" [YT 15:42]](https://www.youtube.com/watch?v=4z3ntYm5ta4) | ["Secret Axis Flights - Europe to Tokyo" [YT 10:21]](https://www.youtube.com/watch?v=r7PzpHNa8iM) | ["Shocking Japanese World War II Museum" [YT 5:04]](https://www.youtube.com/watch?v=ngzesh6eN14) | ["WW2 Rocket Ships - Beach Landing Battering Rams" [YT 8:41]](https://www.youtube.com/watch?v=5gGrkZ00Iwc) | ["Japan vs. Italy - The Forgotten Pacific War" [YT 14:09]](https://www.youtube.com/watch?v=VlSi2Zr-h_Y) ] ["Third Atomic Bomb Attack - Japan 1945" [YT 24:52]](https://www.youtube.com/watch?v=I34pxr23Nhw)
 - War Stories with Mark Felton ["WW2 Japanese Military Brutality Explained" [1:02:24]](https://www.youtube.com/watch?v=kpVgDgKpQS8) | ["Operation PX - WW2 Japanese Bio Weapon Attack on America (Episode 1)" [22:34]](https://www.youtube.com/watch?v=poS2pZ1tCzg) | ["Operation PX - WW2 Japanese Bio-Weapon Attack on America (Episode 2)" [YT 18:53]](https://www.youtube.com/watch?v=wg-9F4xnD1E)
 - Military History Visualized ["Why not blockade Japan into Surrender? (feat. D.M. Giangreco)" [YT 5:18]](https://www.youtube.com/watch?v=f9raqHGJH4Q) | ["Why the Japanese Military wanted to fight on after(!) the 2nd Nuke (feat. D.M. Giangreco)" [YT 4:19]](https://www.youtube.com/watch?v=U0kII5dUXKg) | ["The Invasion of Japan - Operation Olympic / Downfall" [YT 15:03]](https://www.youtube.com/watch?v=k2NZVQzfAbo) | ["Why did Japan attack the United States" [YT 23:33]](https://www.youtube.com/watch?v=zPn4mp6y-4w) | ["Kamikaze Tactics - Insane or Rational?" [YT 22:59]](https://www.youtube.com/watch?v=QqwDvxLVZII) | ["Why Japan had NO Chance in WW2" [YT 13:27]](https://www.youtube.com/watch?v=l9ag2x3CS9M) | ["How the Japanese Carriers were so effective" [YT 14:14]](https://www.youtube.com/watch?v=a8U3rkTXAlM) | ["Japanese Capital Ship Design from Kawachi to Yamato" [YT 1:18:43]](https://www.youtube.com/watch?v=g4u2pIERxWk) | ["Why the Japanese Air Forces failed in World War 2" [YT 15:46]](https://www.youtube.com/watch?v=k6WIN7Ysygc) | ["Nuking Japanese Beaches (WW2) - How close to Reality?" [YT 6:36]](https://www.youtube.com/watch?v=DIY1-TYirIw) | ["Japanese View on Germans in WW2" [YT 11:16]](https://www.youtube.com/watch?v=ZCmNpToDBHA)
 - World War Two ["A Japanese Bureaucratic Mess - WW2 Special" [YT 10:45]](https://www.youtube.com/watch?v=GMoSwbfTfO8) | ["Japanese Plague Bombs - War Against Humanity 023 - November 1941, Pt. 2" [YT 16:14]](https://www.youtube.com/watch?v=uiW8V_z5WhM) | ["Japan is Getting Hungry, Barbarossa is Confused - WW2 - 101 - August 1, 1941" [YT 16:22]](https://www.youtube.com/watch?v=YNKqNKnBz3Y) | ["The Japanese are unstoppable everywhere - WW2 - 121 - December 19, 1941" [YT 17:38]](https://www.youtube.com/watch?v=i71nDbzyHQk) | ["Fortress Singapore Stands Alone! - WW2 - 127 - January 30, 1942" [YT 15:56]](https://www.youtube.com/watch?v=3Uwgi9WhGRU) | ["Pearl Harbor - the Making of a Stupid, Fun Project" [YT 14:07]](https://www.youtube.com/watch?v=nEZaNP1wr0c) | ["Japan Destroys Allied Armada in Biggest Naval Battle in Decades - WW2 - 131 - February 27, 1942" [YT 16:53]](https://www.youtube.com/watch?v=ekTTnSJVqCU) | ["Geishas: World War Two Prostitutes or Entertainers? - WW2 - On the Homefront 007" [YT 11:01]](https://www.youtube.com/watch?v=7Y3IYsNC1WM) | ["WW2 - 130 - Britain's Worst Defeat - Singapore Falls - February 20, 1942" [YT 16:54]](https://www.youtube.com/watch?v=UVxe5AgfP0k) | ["Resistance in China - Myth or Reality? - WW2 - War Against Humanity 009" [YT 14:25]](https://www.youtube.com/watch?v=wZzFhvEva4A)
