--- a/src/content/pagearticles/historia-drezna.mdx
+++ b/src/content/pagearticles/historia-drezna.mdx
@@ -210,7 +210,16 @@ Również w 2006 Yadegar Asisi, artysta pochodzenia austriackiego w starej gazow
 
 W 2011 ukończono przebudowę Muzeum Wojskowo-Historycznego Bundeswehry (niem. Militärhistorisches Museum der Bundeswehr). Autorem projektu jest Daniel Libeskind (urodzony w Łodzi). Samo muzeum istniało od 1873 czyli od założenia miasta garnizonowego w Albertstadt, z początku było garnizonową izbą pamięci. Z czasem jego znaczenie rosło. W okresie powojennym było to oficjalne muzeum NVA (niem. Nationale Volksarmee) armii NRD. Po zjednoczeniu stało się oficjalnym muzeum Bundeswehry i największym muzeum wojskowym w Niemczech.
 
-Od 2014 Drezno stało się znanym w całych Niemczech ośrodkiem tworzenia się ruchu PEGIDA oraz nadzwyczajnej popularności wzbudzającej wiele dyskusji partii politycznej Alternative für Deutschland (AfD). Jej założycielka i była przywódczyni Frauke Petry urodziła się w Dreźnie. Na Placu Teatralnym pomiędzy Semperoper a Katedrą i Zamkiem zbierały się demonstracje liczące nawet kilkanaście tysięcy ludzi. W ostatnich wyborach do Bundestagu we wrześniu 2017 AfD zdobyła w Saksonii, szczególnie w jej wschodniej części ogromną liczbę głosów.
+Od 2014 Drezno stało się znanym w całych Niemczech ośrodkiem tworzenia się ruchu PEGIDA oraz nadzwyczajnej popularności wzbudzającej wiele dyskusji partii politycznej Alternative für Deutschland (AfD). Jej założycielka i była przywódczyni Frauke Petry urodziła się w Dreźnie. Na Placu Teatralnym pomiędzy Semperoper a Katedrą i Zamkiem zbierały się demonstracje liczące nawet kilkanaście tysięcy ludzi. W ostatnich wyborach do Bundestagu we wrześniu 2017 AfD zdobyła w Saksonii, szczególnie w jej wschodniej części ogromną liczbę głosów. W 2019 w wyborach lokalnych (landowych) było to już 27,5% i była to druga siła polityczna po CDU, które osiągnęło wynik 32,1%.
+
+Po dwuletniej przerwie, w 2019 otwarto ekspozycję Festung Dresden.
+
+27 listopada 2019 doszło do jednej z najbardziej zuchwałych kradziezy w historii RFN. Złodzieje włamali się do skarbca zamkowego, muzeum Grünes Gewölbe, w którym były prezentowane osobiste klejnoty Augustów. Wartość zrabowanych kosztowności szacuje się na miliard Euro. Wprawdzie rok później w Berlinie dokonano serii aresztowań powiązanych z tą kradzieżą, ale jak dotąd niczego przed sądem nie udowodniono i nie odzyskano łupów.
+
+Drezno staje się lokalnym hubem technologicznym:
+
+- marzec 2021 - Fraunhofer IFAM Dresden przedstawił Powerpaste, materiał wodorowy, który może magazynować energię 10x bardziej wydajnie niż baterie litowo-jonowe: ["Powerpaste: So kann Wasserstoff nicht nur Mofas antreiben"](https://www.erneuerbareenergien.de/powerpaste-so-kann-wasserstoff-nicht-nur-mofas-antreiben)
+- czerwiec 2021 - Popularnym tematem jest nienaprawialna kaskada deficytów spowodowana zerwanymi łańcuchami dostaw. Jest to spowodowane m.in. tym, że kilku wschodnioazjatyckich producentów zmonopolizowało całą branżę. W Dreźnie otwiera się właśnie duża wytwórnia wafli krzemowych: ["Bosch eröffnet Halbleiterwerk in Dresden"](https://www.mdr.de/nachrichten/sachsen/dresden/dresden-radebeul/hellerau-bosch-halbleiter-werk-eroeffnung-100.html)
 
  ### Symbole Drezna
 
@@ -226,8 +235,3 @@ W drugą sobotę Adwentu urządzany jest uroczysty pochód Dresdner Stollenfest 
 *Strudel w 2016, na wozie podane są jego parametry.*
 
 Tradycja gigantycznego strudla ma źródło w legendzie o wielkim cieście, które upiekli kucharze księcia elektora Augusta II Mocnego na zakończenie manewrów odnowionej, saksońskiej armii, które miały miejsce w północnej Saksonii w 1730 (niem. Zeithainer Lustlage). Według kronik zostało upieczone w całości i ważyło prawie 2 tony. Po prawie trzech wiekach opowieść o tym cieście została wydobyta z archiwów i użyta jako osnowa tej "nowej, świeckiej tradycji". Pierwsza Parada Strudlowa odbyła się w 1994 i od tej pory całe miasto szczyci się tą znana już na całym świecie tradycją. Rekordowy Christstollen powstał w 2013 roku, ważył ponad 4 tony. Współcześnie gigantyczny strudel pieczony jest w warstwach, składanych później w całość, nawet współczesna technika nie umożliwia wypieczenia tak wielkiego ciasta w jednym kawałku.
-
-Drezno staje się lokalnym hubem technologicznym:
-
-- marzec 2021 - Fraunhofer IFAM Dresden przedstawił Powerpaste, materiał wodorowy, który może magazynować energię 10x bardziej wydajnie niż baterie litowo-jonowe: ["Powerpaste: So kann Wasserstoff nicht nur Mofas antreiben"](https://www.erneuerbareenergien.de/powerpaste-so-kann-wasserstoff-nicht-nur-mofas-antreiben)
-- czerwiec 2021 - Popularnym tematem jest nienaprawialna kaskada deficytów spowodowana zerwanymi łańcuchami dostaw. Jest to spowodowane m.in. tym, że kilku wschodnioazjatyckich producentów zmonopolizowało całą branżę. W Dreźnie otwiera się właśnie duża wytwórnia wafli krzemowych: ["Bosch eröffnet Halbleiterwerk in Dresden"](https://www.mdr.de/nachrichten/sachsen/dresden/dresden-radebeul/hellerau-bosch-halbleiter-werk-eroeffnung-100.html)
